@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2012, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2012, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -102,6 +102,7 @@ import java.time.zone.ZoneRulesProvider;
 import java.util.AbstractMap.SimpleImmutableEntry;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Calendar;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
@@ -117,10 +118,13 @@ import java.util.Set;
 import java.util.TimeZone;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
 import sun.text.spi.JavaTimeDateTimePatternProvider;
 import sun.util.locale.provider.CalendarDataUtility;
 import sun.util.locale.provider.LocaleProviderAdapter;
+import sun.util.locale.provider.LocaleResources;
 import sun.util.locale.provider.TimeZoneNameUtility;
 
 /**
@@ -161,7 +165,7 @@ public final class DateTimeFormatterBuilder {
      */
     private static final TemporalQuery<ZoneId> QUERY_REGION_ONLY = (temporal) -> {
         ZoneId zone = temporal.query(TemporalQueries.zoneId());
-        return (zone != null && zone instanceof ZoneOffset == false ? zone : null);
+        return zone instanceof ZoneOffset ? null : zone;
     };
 
     /**
@@ -218,10 +222,45 @@ public final class DateTimeFormatterBuilder {
         }
         LocaleProviderAdapter adapter = LocaleProviderAdapter.getAdapter(JavaTimeDateTimePatternProvider.class, locale);
         JavaTimeDateTimePatternProvider provider = adapter.getJavaTimeDateTimePatternProvider();
-        String pattern = provider.getJavaTimeDateTimePattern(convertStyle(timeStyle),
+        return provider.getJavaTimeDateTimePattern(convertStyle(timeStyle),
                          convertStyle(dateStyle), chrono.getCalendarType(),
                          CalendarDataUtility.findRegionOverride(locale));
-        return pattern;
+    }
+
+    /**
+     * Returns the formatting pattern for the requested template for a locale and chronology.
+     * The locale and chronology are used to lookup the locale specific format
+     * for the requested template.
+     * <p>
+     * If the locale contains the "rg" (region override)
+     * <a href="../../util/Locale.html#def_locale_extension">Unicode extensions</a>,
+     * the formatting pattern is overridden with the one appropriate for the region.
+     * <p>
+     * Refer to {@link #appendLocalized(String)} for the detail of {@code requestedTemplate}
+     * argument.
+     *
+     * @param requestedTemplate the requested template, not null
+     * @param chrono  the Chronology, non-null
+     * @param locale  the locale, non-null
+     * @return the locale and Chronology specific formatting pattern
+     * @throws IllegalArgumentException if {@code requestedTemplate} does not match
+     *      the regular expression syntax described in {@link #appendLocalized(String)}.
+     * @throws DateTimeException if a match for the localized pattern for
+     *      {@code requestedTemplate} is not available
+     * @see #appendLocalized(String)
+     * @since 19
+     */
+    public static String getLocalizedDateTimePattern(String requestedTemplate,
+                                                     Chronology chrono, Locale locale) {
+        Objects.requireNonNull(requestedTemplate, "requestedTemplate");
+        Objects.requireNonNull(chrono, "chrono");
+        Objects.requireNonNull(locale, "locale");
+        Locale override = CalendarDataUtility.findRegionOverride(locale);
+        LocaleProviderAdapter adapter = LocaleProviderAdapter.getAdapter(JavaTimeDateTimePatternProvider.class, override);
+        JavaTimeDateTimePatternProvider provider = adapter.getJavaTimeDateTimePatternProvider();
+        return provider.getJavaTimeDateTimePattern(requestedTemplate,
+                chrono.getCalendarType(),
+                override);
     }
 
     /**
@@ -314,6 +353,10 @@ public final class DateTimeFormatterBuilder {
      * The change will remain in force until the end of the formatter that is eventually
      * constructed or until {@code parseLenient} is called.
      *
+     * @implSpec A {@link Character#SPACE_SEPARATOR SPACE_SEPARATOR} in the input
+     * text will not match any other {@link Character#SPACE_SEPARATOR SPACE_SEPARATOR}s
+     * in the pattern with the strict parse style.
+     *
      * @return this, for chaining, not null
      */
     public DateTimeFormatterBuilder parseStrict() {
@@ -332,6 +375,10 @@ public final class DateTimeFormatterBuilder {
      * When used, this method changes the parsing to be lenient from this point onwards.
      * The change will remain in force until the end of the formatter that is eventually
      * constructed or until {@code parseStrict} is called.
+     *
+     * @implSpec A {@link Character#SPACE_SEPARATOR SPACE_SEPARATOR} in the input
+     * text will match any other {@link Character#SPACE_SEPARATOR SPACE_SEPARATOR}s
+     * in the pattern with the lenient parse style.
      *
      * @return this, for chaining, not null
      */
@@ -678,15 +725,15 @@ public final class DateTimeFormatterBuilder {
      * the minimum and maximum width. In strict mode, if the minimum and maximum widths
      * are equal and there is no decimal point then the parser will
      * participate in adjacent value parsing, see
-     * {@link appendValue(java.time.temporal.TemporalField, int)}. When parsing in lenient mode,
+     * {@link #appendValue(java.time.temporal.TemporalField, int)}. When parsing in lenient mode,
      * the minimum width is considered to be zero and the maximum is nine.
      * <p>
      * If the value cannot be obtained then an exception will be thrown.
      * If the value is negative an exception will be thrown.
      * If the field does not have a fixed set of valid values then an
      * exception will be thrown.
-     * If the field value in the date-time to be printed is invalid it
-     * cannot be printed and an exception will be thrown.
+     * If the field value in the date-time to be printed is outside the
+     * range of valid values then an exception will be thrown.
      *
      * @param field  the field to append, not null
      * @param minWidth  the minimum width of the field excluding the decimal point, from 0 to 9
@@ -698,11 +745,20 @@ public final class DateTimeFormatterBuilder {
      */
     public DateTimeFormatterBuilder appendFraction(
             TemporalField field, int minWidth, int maxWidth, boolean decimalPoint) {
-        if (minWidth == maxWidth && decimalPoint == false) {
-            // adjacent parsing
-            appendValue(new FractionPrinterParser(field, minWidth, maxWidth, decimalPoint));
+        if (field == NANO_OF_SECOND) {
+            if (minWidth == maxWidth && decimalPoint == false) {
+                // adjacent parsing
+                appendValue(new NanosPrinterParser(minWidth, maxWidth, decimalPoint));
+            } else {
+                appendInternal(new NanosPrinterParser(minWidth, maxWidth, decimalPoint));
+            }
         } else {
-            appendInternal(new FractionPrinterParser(field, minWidth, maxWidth, decimalPoint));
+            if (minWidth == maxWidth && decimalPoint == false) {
+                // adjacent parsing
+                appendValue(new FractionPrinterParser(field, minWidth, maxWidth, decimalPoint));
+            } else {
+                appendInternal(new FractionPrinterParser(field, minWidth, maxWidth, decimalPoint));
+            }
         }
         return this;
     }
@@ -1412,6 +1468,86 @@ public final class DateTimeFormatterBuilder {
     }
 
     //-----------------------------------------------------------------------
+    // RegEx pattern for skeleton validity checking
+    private static final Pattern VALID_TEMPLATE_PATTERN = Pattern.compile(
+        "G{0,5}" +        // Era
+        "y*" +            // Year
+        "Q{0,5}" +        // Quarter
+        "M{0,5}" +        // Month
+        "w*" +            // Week of Week Based Year
+        "E{0,5}" +        // Day of Week
+        "d{0,2}" +        // Day of Month
+        "B{0,5}" +        // Period/AmPm of Day
+        "[hHjC]{0,2}" +   // Hour of Day/AmPm
+        "m{0,2}" +        // Minute of Hour
+        "s{0,2}" +        // Second of Minute
+        "[vz]{0,4}");     // Zone
+    /**
+     * Appends a localized pattern to the formatter using the requested template.
+     * <p>
+     * This appends a localized section to the builder, suitable for outputting
+     * a date, time or date-time combination. The format of the localized
+     * section is lazily looked up based on three items:
+     * <ul>
+     * <li>the {@code requestedTemplate} specified to this method
+     * <li>the {@code Locale} of the {@code DateTimeFormatter}
+     * <li>the {@code Chronology} of the {@code DateTimeFormatter} unless overridden
+     * </ul>
+     * During formatting, the chronology is obtained from the temporal object
+     * being formatted, which may have been overridden by
+     * {@link DateTimeFormatter#withChronology(Chronology)}.
+     * <p>
+     * During parsing, if a chronology has already been parsed, then it is used.
+     * Otherwise the default from {@code DateTimeFormatter.withChronology(Chronology)}
+     * is used, with {@code IsoChronology} as the fallback.
+     * <p>
+     * The requested template is a series of typical pattern
+     * symbols in canonical order from the largest date or time unit to the smallest,
+     * which can be expressed with the following regular expression:
+     * {@snippet :
+     *      "G{0,5}" +        // Era
+     *      "y*" +            // Year
+     *      "Q{0,5}" +        // Quarter
+     *      "M{0,5}" +        // Month
+     *      "w*" +            // Week of Week Based Year
+     *      "E{0,5}" +        // Day of Week
+     *      "d{0,2}" +        // Day of Month
+     *      "B{0,5}" +        // Period/AmPm of Day
+     *      "[hHjC]{0,2}" +   // Hour of Day/AmPm (refer to LDML for 'j' and 'C')
+     *      "m{0,2}" +        // Minute of Hour
+     *      "s{0,2}" +        // Second of Minute
+     *      "[vz]{0,4}"       // Zone
+     * }
+     * All pattern symbols are optional, and each pattern symbol represents a field,
+     * for example, 'M' represents the Month field. The number of the pattern symbol letters follows the
+     * same presentation, such as "number" or "text" as in the
+     * <a href="./DateTimeFormatter.html#patterns">Patterns for Formatting and Parsing</a> section.
+     * Other pattern symbols in the requested template are invalid.
+     * <p>
+     * The mapping of the requested template to the closest of the available localized formats
+     * is defined by the
+     * <a href="https://www.unicode.org/reports/tr35/tr35-dates.html#availableFormats_appendItems">
+     * Unicode LDML specification</a>. For example, the formatter created from the requested template
+     * {@code yMMM} will format the date '2020-06-16' to 'Jun 2020' in the {@link Locale#US US locale}.
+     *
+     * @param requestedTemplate the requested template to use, not null
+     * @return this, for chaining, not null
+     * @throws IllegalArgumentException if {@code requestedTemplate} is invalid
+     *
+     * @spec https://www.unicode.org/reports/tr35 Unicode Locale Data Markup Language (LDML)
+     * @see #appendPattern(String)
+     * @since 19
+     */
+    public DateTimeFormatterBuilder appendLocalized(String requestedTemplate) {
+        Objects.requireNonNull(requestedTemplate, "requestedTemplate");
+        if (!VALID_TEMPLATE_PATTERN.matcher(requestedTemplate).matches()) {
+            throw new IllegalArgumentException("Requested template is invalid: " + requestedTemplate);
+        }
+        appendInternal(new LocalizedPrinterParser(requestedTemplate));
+        return this;
+    }
+
+    //-----------------------------------------------------------------------
     /**
      * Appends a character literal to the formatter.
      * <p>
@@ -1444,6 +1580,57 @@ public final class DateTimeFormatterBuilder {
                 appendInternal(new StringLiteralPrinterParser(literal));
             }
         }
+        return this;
+    }
+
+    /**
+     * Appends the day period text to the formatter.
+     * <p>
+     * This appends an instruction to format/parse the textual name of the day period
+     * to the builder. Day periods are defined in LDML's
+     * <a href="https://unicode.org/reports/tr35/tr35-dates.html#dayPeriods">"day periods"
+     * </a> element.
+     * <p>
+     * During formatting, the day period is obtained from {@code HOUR_OF_DAY}, and
+     * optionally {@code MINUTE_OF_HOUR} if exist. It will be mapped to a day period
+     * type defined in LDML, such as "morning1" and then it will be translated into
+     * text. Mapping to a day period type and its translation both depend on the
+     * locale in the formatter.
+     * <p>
+     * During parsing, the text will be parsed into a day period type first. Then
+     * the parsed day period is combined with other fields to make a {@code LocalTime} in
+     * the resolving phase. If the {@code HOUR_OF_AMPM} field is present, it is combined
+     * with the day period to make {@code HOUR_OF_DAY} taking into account any
+     * {@code MINUTE_OF_HOUR} value. If {@code HOUR_OF_DAY} is present, it is validated
+     * against the day period taking into account any {@code MINUTE_OF_HOUR} value. If a
+     * day period is present without {@code HOUR_OF_DAY}, {@code MINUTE_OF_HOUR},
+     * {@code SECOND_OF_MINUTE} and {@code NANO_OF_SECOND} then the midpoint of the
+     * day period is set as the time in {@code SMART} and {@code LENIENT} mode.
+     * For example, if the parsed day period type is "night1" and the period defined
+     * for it in the formatter locale is from 21:00 to 06:00, then it results in
+     * the {@code LocalTime} of 01:30.
+     * If the resolved time conflicts with the day period, {@code DateTimeException} is
+     * thrown in {@code STRICT} and {@code SMART} mode. In {@code LENIENT} mode, no
+     * exception is thrown and the parsed day period is ignored.
+     * <p>
+     * The "midnight" type allows both "00:00" as the start-of-day and "24:00" as the
+     * end-of-day, as long as they are valid with the resolved hour field.
+     *
+     * @param style the text style to use, not null
+     * @return this, for chaining, not null
+     *
+     * @spec https://www.unicode.org/reports/tr35 Unicode Locale Data Markup Language (LDML)
+     * @since 16
+     */
+    public DateTimeFormatterBuilder appendDayPeriodText(TextStyle style) {
+        Objects.requireNonNull(style, "style");
+        switch (style) {
+            // Stand-alone is not applicable. Convert to standard text style
+            case FULL_STANDALONE -> style = TextStyle.FULL;
+            case SHORT_STANDALONE -> style = TextStyle.SHORT;
+            case NARROW_STANDALONE -> style = TextStyle.NARROW;
+        }
+        appendInternal(new DayPeriodPrinterParser(style));
         return this;
     }
 
@@ -1510,6 +1697,7 @@ public final class DateTimeFormatterBuilder {
      *   F       day-of-week-in-month        number            3
      *
      *   a       am-pm-of-day                text              PM
+     *   B       period-of-day               text              in the morning
      *   h       clock-hour-of-am-pm (1-12)  number            12
      *   K       hour-of-am-pm (0-11)        number            0
      *   k       clock-hour-of-day (1-24)    number            24
@@ -1556,11 +1744,11 @@ public final class DateTimeFormatterBuilder {
      *    GGGGG   5      appendText(ChronoField.ERA, TextStyle.NARROW)
      *
      *    u       1      appendValue(ChronoField.YEAR, 1, 19, SignStyle.NORMAL)
-     *    uu      2      appendValueReduced(ChronoField.YEAR, 2, 2000)
+     *    uu      2      appendValueReduced(ChronoField.YEAR, 2, 2, 2000)
      *    uuu     3      appendValue(ChronoField.YEAR, 3, 19, SignStyle.NORMAL)
      *    u..u    4..n   appendValue(ChronoField.YEAR, n, 19, SignStyle.EXCEEDS_PAD)
      *    y       1      appendValue(ChronoField.YEAR_OF_ERA, 1, 19, SignStyle.NORMAL)
-     *    yy      2      appendValueReduced(ChronoField.YEAR_OF_ERA, 2, 2000)
+     *    yy      2      appendValueReduced(ChronoField.YEAR_OF_ERA, 2, 2, 2000)
      *    yyy     3      appendValue(ChronoField.YEAR_OF_ERA, 3, 19, SignStyle.NORMAL)
      *    y..y    4..n   appendValue(ChronoField.YEAR_OF_ERA, n, 19, SignStyle.EXCEEDS_PAD)
      *    Y       1      append special localized WeekFields element for numeric week-based-year
@@ -1598,7 +1786,7 @@ public final class DateTimeFormatterBuilder {
      *    D       1      appendValue(ChronoField.DAY_OF_YEAR)
      *    DD      2      appendValue(ChronoField.DAY_OF_YEAR, 2, 3, SignStyle.NOT_NEGATIVE)
      *    DDD     3      appendValue(ChronoField.DAY_OF_YEAR, 3)
-     *    F       1      appendValue(ChronoField.ALIGNED_DAY_OF_WEEK_IN_MONTH)
+     *    F       1      appendValue(ChronoField.ALIGNED_WEEK_OF_MONTH)
      *    g..g    1..n   appendValue(JulianFields.MODIFIED_JULIAN_DAY, n, 19, SignStyle.NORMAL)
      *    E       1      appendText(ChronoField.DAY_OF_WEEK, TextStyle.SHORT)
      *    EE      2      appendText(ChronoField.DAY_OF_WEEK, TextStyle.SHORT)
@@ -1638,6 +1826,15 @@ public final class DateTimeFormatterBuilder {
      *    A..A    1..n   appendValue(ChronoField.MILLI_OF_DAY, n, 19, SignStyle.NOT_NEGATIVE)
      *    n..n    1..n   appendValue(ChronoField.NANO_OF_SECOND, n, 19, SignStyle.NOT_NEGATIVE)
      *    N..N    1..n   appendValue(ChronoField.NANO_OF_DAY, n, 19, SignStyle.NOT_NEGATIVE)
+     * </pre>
+     * <p>
+     * <b>Day periods</b>: Pattern letters to output a day period.
+     * <pre>
+     *  Pattern  Count  Equivalent builder methods
+     *  -------  -----  --------------------------
+     *    B       1      appendDayPeriodText(TextStyle.SHORT)
+     *    BBBB    4      appendDayPeriodText(TextStyle.FULL)
+     *    BBBBB   5      appendDayPeriodText(TextStyle.NARROW)
      * </pre>
      * <p>
      * <b>Zone ID</b>: Pattern letters to output {@code ZoneId}.
@@ -1759,7 +1956,7 @@ public final class DateTimeFormatterBuilder {
                     } else if (count == 4) {
                         appendGenericZoneText(TextStyle.FULL);
                     } else {
-                        throw new IllegalArgumentException("Wrong number of  pattern letters: " + cur);
+                        throw new IllegalArgumentException("Wrong number of pattern letters: " + cur);
                     }
                 } else if (cur == 'Z') {
                     if (count < 4) {
@@ -1808,6 +2005,13 @@ public final class DateTimeFormatterBuilder {
                         appendValue(new WeekBasedFieldPrinterParser(cur, count, count, 2));
                     } else {
                         appendValue(new WeekBasedFieldPrinterParser(cur, count, count, 19));
+                    }
+                } else if (cur == 'B') {
+                    switch (count) {
+                        case 1 -> appendDayPeriodText(TextStyle.SHORT);
+                        case 4 -> appendDayPeriodText(TextStyle.FULL);
+                        case 5 -> appendDayPeriodText(TextStyle.NARROW);
+                        default -> throw new IllegalArgumentException("Wrong number of pattern letters: " + cur);
                     }
                 } else {
                     throw new IllegalArgumentException("Unknown pattern letter: " + cur);
@@ -1920,19 +2124,10 @@ public final class DateTimeFormatterBuilder {
                 break;
             case 'G':
                 switch (count) {
-                    case 1:
-                    case 2:
-                    case 3:
-                        appendText(field, TextStyle.SHORT);
-                        break;
-                    case 4:
-                        appendText(field, TextStyle.FULL);
-                        break;
-                    case 5:
-                        appendText(field, TextStyle.NARROW);
-                        break;
-                    default:
-                        throw new IllegalArgumentException("Too many pattern letters: " + cur);
+                    case 1, 2, 3 -> appendText(field, TextStyle.SHORT);
+                    case 4 -> appendText(field, TextStyle.FULL);
+                    case 5 -> appendText(field, TextStyle.NARROW);
+                    default -> throw new IllegalArgumentException("Too many pattern letters: " + cur);
                 }
                 break;
             case 'S':
@@ -2000,7 +2195,7 @@ public final class DateTimeFormatterBuilder {
         FIELD_MAP.put('L', ChronoField.MONTH_OF_YEAR);             // SDF, LDML (stand-alone)
         FIELD_MAP.put('D', ChronoField.DAY_OF_YEAR);               // SDF, LDML
         FIELD_MAP.put('d', ChronoField.DAY_OF_MONTH);              // SDF, LDML
-        FIELD_MAP.put('F', ChronoField.ALIGNED_DAY_OF_WEEK_IN_MONTH);  // SDF, LDML
+        FIELD_MAP.put('F', ChronoField.ALIGNED_WEEK_OF_MONTH);     // SDF, LDML
         FIELD_MAP.put('E', ChronoField.DAY_OF_WEEK);               // SDF, LDML (different to both for 1/2 chars)
         FIELD_MAP.put('c', ChronoField.DAY_OF_WEEK);               // LDML (stand-alone)
         FIELD_MAP.put('e', ChronoField.DAY_OF_WEEK);               // LDML (needs localized week number)
@@ -2025,6 +2220,7 @@ public final class DateTimeFormatterBuilder {
         // 310 - X - matches LDML, almost matches SDF for 1, exact match 2&3, extended 4&5
         // 310 - x - matches LDML
         // 310 - w, W, and Y are localized forms matching LDML
+        // LDML - B - day periods
         // LDML - U - cycle year name, not supported by 310 yet
         // LDML - l - deprecated
         // LDML - j - not relevant
@@ -2160,9 +2356,7 @@ public final class DateTimeFormatterBuilder {
     private int appendInternal(DateTimePrinterParser pp) {
         Objects.requireNonNull(pp, "pp");
         if (active.padNextWidth > 0) {
-            if (pp != null) {
-                pp = new PadPrinterParserDecorator(pp, active.padNextWidth, active.padNextChar);
-            }
+            pp = new PadPrinterParserDecorator(pp, active.padNextWidth, active.padNextChar);
             active.padNextWidth = 0;
             active.padNextChar = 0;
         }
@@ -2310,11 +2504,11 @@ public final class DateTimeFormatterBuilder {
         private final DateTimePrinterParser[] printerParsers;
         private final boolean optional;
 
-        CompositePrinterParser(List<DateTimePrinterParser> printerParsers, boolean optional) {
-            this(printerParsers.toArray(new DateTimePrinterParser[printerParsers.size()]), optional);
+        private CompositePrinterParser(List<DateTimePrinterParser> printerParsers, boolean optional) {
+            this(printerParsers.toArray(new DateTimePrinterParser[0]), optional);
         }
 
-        CompositePrinterParser(DateTimePrinterParser[] printerParsers, boolean optional) {
+        private CompositePrinterParser(DateTimePrinterParser[] printerParsers, boolean optional) {
             this.printerParsers = printerParsers;
             this.optional = optional;
         }
@@ -2408,7 +2602,7 @@ public final class DateTimeFormatterBuilder {
          * @param padWidth  the width to pad to, 1 or greater
          * @param padChar  the pad character
          */
-        PadPrinterParserDecorator(DateTimePrinterParser printerParser, int padWidth, char padChar) {
+        private PadPrinterParserDecorator(DateTimePrinterParser printerParser, int padWidth, char padChar) {
             // input checked by DateTimeFormatterBuilder
             this.printerParser = printerParser;
             this.padWidth = padWidth;
@@ -2426,9 +2620,15 @@ public final class DateTimeFormatterBuilder {
                 throw new DateTimeException(
                     "Cannot print as output of " + len + " characters exceeds pad width of " + padWidth);
             }
-            for (int i = 0; i < padWidth - len; i++) {
-                buf.insert(preLen, padChar);
+            var count = padWidth - len;
+            if (count == 0) {
+                return true;
             }
+            if (count == 1) {
+                buf.insert(preLen, padChar);
+                return true;
+            }
+            buf.insert(preLen, String.valueOf(padChar).repeat(count));
             return true;
         }
 
@@ -2487,10 +2687,10 @@ public final class DateTimeFormatterBuilder {
         public int parse(DateTimeParseContext context, CharSequence text, int position) {
             // using ordinals to avoid javac synthetic inner class
             switch (ordinal()) {
-                case 0: context.setCaseSensitive(true); break;
-                case 1: context.setCaseSensitive(false); break;
-                case 2: context.setStrict(true); break;
-                case 3: context.setStrict(false); break;
+                case 0 -> context.setCaseSensitive(true);
+                case 1 -> context.setCaseSensitive(false);
+                case 2 -> context.setStrict(true);
+                case 3 -> context.setStrict(false);
             }
             return position;
         }
@@ -2498,13 +2698,13 @@ public final class DateTimeFormatterBuilder {
         @Override
         public String toString() {
             // using ordinals to avoid javac synthetic inner class
-            switch (ordinal()) {
-                case 0: return "ParseCaseSensitive(true)";
-                case 1: return "ParseCaseSensitive(false)";
-                case 2: return "ParseStrict(true)";
-                case 3: return "ParseStrict(false)";
-            }
-            throw new IllegalStateException("Unreachable");
+            return switch (ordinal()) {
+                case 0 -> "ParseCaseSensitive(true)";
+                case 1 -> "ParseCaseSensitive(false)";
+                case 2 -> "ParseStrict(true)";
+                case 3 -> "ParseStrict(false)";
+                default -> throw new IllegalStateException("Unreachable");
+            };
         }
     }
 
@@ -2516,7 +2716,7 @@ public final class DateTimeFormatterBuilder {
         private final TemporalField field;
         private final long value;
 
-        DefaultValueParser(TemporalField field, long value) {
+        private DefaultValueParser(TemporalField field, long value) {
             this.field = field;
             this.value = value;
         }
@@ -2539,9 +2739,11 @@ public final class DateTimeFormatterBuilder {
      */
     static final class CharLiteralPrinterParser implements DateTimePrinterParser {
         private final char literal;
+        private final boolean isSpaceSeparator;
 
-        CharLiteralPrinterParser(char literal) {
+        private CharLiteralPrinterParser(char literal) {
             this.literal = literal;
+            isSpaceSeparator = Character.getType(literal) == Character.SPACE_SEPARATOR;
         }
 
         @Override
@@ -2558,9 +2760,10 @@ public final class DateTimeFormatterBuilder {
             }
             char ch = text.charAt(position);
             if (ch != literal) {
-                if (context.isCaseSensitive() ||
+                if ((context.isCaseSensitive() ||
                         (Character.toUpperCase(ch) != Character.toUpperCase(literal) &&
-                         Character.toLowerCase(ch) != Character.toLowerCase(literal))) {
+                         Character.toLowerCase(ch) != Character.toLowerCase(literal))) &&
+                        !spaceEquals(context, ch)) {
                     return ~position;
                 }
             }
@@ -2574,6 +2777,12 @@ public final class DateTimeFormatterBuilder {
             }
             return "'" + literal + "'";
         }
+
+        private boolean spaceEquals(DateTimeParseContext context, char ch) {
+            return !context.isStrict() && isSpaceSeparator &&
+                    Character.getType(ch) == Character.SPACE_SEPARATOR;
+        }
+
     }
 
     //-----------------------------------------------------------------------
@@ -2583,7 +2792,7 @@ public final class DateTimeFormatterBuilder {
     static final class StringLiteralPrinterParser implements DateTimePrinterParser {
         private final String literal;
 
-        StringLiteralPrinterParser(String literal) {
+        private StringLiteralPrinterParser(String literal) {
             this.literal = literal;  // validated by caller
         }
 
@@ -2649,7 +2858,7 @@ public final class DateTimeFormatterBuilder {
          * @param maxWidth  the maximum field width, from minWidth to 19
          * @param signStyle  the positive/negative sign style, not null
          */
-        NumberPrinterParser(TemporalField field, int minWidth, int maxWidth, SignStyle signStyle) {
+        private NumberPrinterParser(TemporalField field, int minWidth, int maxWidth, SignStyle signStyle) {
             // validated by caller
             this.field = field;
             this.minWidth = minWidth;
@@ -2699,6 +2908,24 @@ public final class DateTimeFormatterBuilder {
             return new NumberPrinterParser(field, minWidth, maxWidth, signStyle, this.subsequentWidth + subsequentWidth);
         }
 
+        /*
+         * Copied from Long.stringSize
+         */
+        private static int stringSize(long x) {
+            int d = 1;
+            if (x >= 0) {
+                d = 0;
+                x = -x;
+            }
+            long p = -10;
+            for (int i = 1; i < 19; i++) {
+                if (x > p)
+                    return i + d;
+                p = 10 * p;
+            }
+            return 19 + d;
+        }
+
         @Override
         public boolean format(DateTimePrintContext context, StringBuilder buf) {
             Long valueLong = context.getValue(field);
@@ -2707,18 +2934,21 @@ public final class DateTimeFormatterBuilder {
             }
             long value = getValue(context, valueLong);
             DecimalStyle decimalStyle = context.getDecimalStyle();
-            String str = (value == Long.MIN_VALUE ? "9223372036854775808" : Long.toString(Math.abs(value)));
-            if (str.length() > maxWidth) {
+            int size = stringSize(value);
+            if (value < 0) {
+                size--;
+            }
+
+            if (size > maxWidth) {
                 throw new DateTimeException("Field " + field +
                     " cannot be printed as the value " + value +
                     " exceeds the maximum print width of " + maxWidth);
             }
-            str = decimalStyle.convertNumberToI18N(str);
 
             if (value >= 0) {
                 switch (signStyle) {
                     case EXCEEDS_PAD:
-                        if (minWidth < 19 && value >= EXCEED_POINTS[minWidth]) {
+                        if (minWidth < 19 && size > minWidth) {
                             buf.append(decimalStyle.getPositiveSign());
                         }
                         break;
@@ -2728,21 +2958,22 @@ public final class DateTimeFormatterBuilder {
                 }
             } else {
                 switch (signStyle) {
-                    case NORMAL:
-                    case EXCEEDS_PAD:
-                    case ALWAYS:
-                        buf.append(decimalStyle.getNegativeSign());
-                        break;
-                    case NOT_NEGATIVE:
-                        throw new DateTimeException("Field " + field +
-                            " cannot be printed as the value " + value +
-                            " cannot be negative according to the SignStyle");
+                    case NORMAL, EXCEEDS_PAD, ALWAYS -> buf.append(decimalStyle.getNegativeSign());
+                    case NOT_NEGATIVE -> throw new DateTimeException("Field " + field +
+                                             " cannot be printed as the value " + value +
+                                             " cannot be negative according to the SignStyle");
                 }
             }
-            for (int i = 0; i < minWidth - str.length(); i++) {
-                buf.append(decimalStyle.getZeroDigit());
+            char zeroDigit = decimalStyle.getZeroDigit();
+            for (int i = 0; i < minWidth - size; i++) {
+                buf.append(zeroDigit);
             }
-            buf.append(str);
+            if (zeroDigit == '0' && value != Long.MIN_VALUE) {
+                buf.append(Math.abs(value));
+            } else {
+                String str = value == Long.MIN_VALUE ? "9223372036854775808" : Long.toString(Math.abs(value));
+                buf.append(decimalStyle.convertNumberToI18N(str));
+            }
             return true;
         }
 
@@ -2918,7 +3149,7 @@ public final class DateTimeFormatterBuilder {
          * @param baseValue  the base value
          * @param baseDate  the base date
          */
-        ReducedPrinterParser(TemporalField field, int minWidth, int maxWidth,
+        private ReducedPrinterParser(TemporalField field, int minWidth, int maxWidth,
                 int baseValue, ChronoLocalDate baseDate) {
             this(field, minWidth, maxWidth, baseValue, baseDate, 0);
             if (minWidth < 1 || minWidth > 10) {
@@ -3059,10 +3290,214 @@ public final class DateTimeFormatterBuilder {
 
     //-----------------------------------------------------------------------
     /**
+     * Prints and parses a NANO_OF_SECOND field with optional padding.
+     */
+    static final class NanosPrinterParser extends NumberPrinterParser {
+        private final boolean decimalPoint;
+
+        /**
+         * Constructor.
+         *
+         * @param minWidth  the minimum width to output, from 0 to 9
+         * @param maxWidth  the maximum width to output, from 0 to 9
+         * @param decimalPoint  whether to output the localized decimal point symbol
+         */
+        private NanosPrinterParser(int minWidth, int maxWidth, boolean decimalPoint) {
+            this(minWidth, maxWidth, decimalPoint, 0);
+            if (minWidth < 0 || minWidth > 9) {
+                throw new IllegalArgumentException("Minimum width must be from 0 to 9 inclusive but was " + minWidth);
+            }
+            if (maxWidth < 1 || maxWidth > 9) {
+                throw new IllegalArgumentException("Maximum width must be from 1 to 9 inclusive but was " + maxWidth);
+            }
+            if (maxWidth < minWidth) {
+                throw new IllegalArgumentException("Maximum width must exceed or equal the minimum width but " +
+                        maxWidth + " < " + minWidth);
+            }
+        }
+
+        /**
+         * Constructor.
+         *
+         * @param minWidth  the minimum width to output, from 0 to 9
+         * @param maxWidth  the maximum width to output, from 0 to 9
+         * @param decimalPoint  whether to output the localized decimal point symbol
+         * @param subsequentWidth the subsequentWidth for this instance
+         */
+        private NanosPrinterParser(int minWidth, int maxWidth, boolean decimalPoint, int subsequentWidth) {
+            super(NANO_OF_SECOND, minWidth, maxWidth, SignStyle.NOT_NEGATIVE, subsequentWidth);
+            this.decimalPoint = decimalPoint;
+        }
+
+        /**
+         * Returns a new instance with fixed width flag set.
+         *
+         * @return a new updated printer-parser, not null
+         */
+        @Override
+        NanosPrinterParser withFixedWidth() {
+            if (subsequentWidth == -1) {
+                return this;
+            }
+            return new NanosPrinterParser(minWidth, maxWidth, decimalPoint, -1);
+        }
+
+        /**
+         * Returns a new instance with an updated subsequent width.
+         *
+         * @param subsequentWidth  the width of subsequent non-negative numbers, 0 or greater
+         * @return a new updated printer-parser, not null
+         */
+        @Override
+        NanosPrinterParser withSubsequentWidth(int subsequentWidth) {
+            return new NanosPrinterParser(minWidth, maxWidth, decimalPoint, this.subsequentWidth + subsequentWidth);
+        }
+
+        /**
+         * For NanosPrinterParser, the width is fixed if context is strict,
+         * minWidth equal to maxWidth and decimalpoint is absent.
+         * @param context the context
+         * @return if the field is fixed width
+         * @see #appendFraction(java.time.temporal.TemporalField, int, int, boolean)
+         */
+        @Override
+        boolean isFixedWidth(DateTimeParseContext context) {
+            if (context.isStrict() && minWidth == maxWidth && decimalPoint == false) {
+                return true;
+            }
+            return false;
+        }
+
+        // Simplified variant of Integer.stringSize that assumes positive values
+        private static int stringSize(int x) {
+            int p = 10;
+            for (int i = 1; i < 10; i++) {
+                if (x < p)
+                    return i;
+                p = 10 * p;
+            }
+            return 10;
+        }
+
+        private static final int[] TENS = new int[] {
+            1,
+            10,
+            100,
+            1000,
+            10000,
+            100000,
+            1000000,
+            10000000,
+            100000000
+        };
+
+        @Override
+        public boolean format(DateTimePrintContext context, StringBuilder buf) {
+            Long value = context.getValue(field);
+            if (value == null) {
+                return false;
+            }
+            int val = field.range().checkValidIntValue(value, field);
+            DecimalStyle decimalStyle = context.getDecimalStyle();
+            int stringSize = stringSize(val);
+            char zero = decimalStyle.getZeroDigit();
+            if (val == 0 || stringSize < 10 - maxWidth) {
+                // 0 or would round down to 0
+                // to get output identical to FractionPrinterParser use minWidth if the
+                // value is zero, maxWidth otherwise
+                int width = val == 0 ? minWidth : maxWidth;
+                if (width > 0) {
+                    if (decimalPoint) {
+                        buf.append(decimalStyle.getDecimalSeparator());
+                    }
+                    for (int i = 0; i < width; i++) {
+                        buf.append(zero);
+                    }
+                }
+            } else {
+                if (decimalPoint) {
+                    buf.append(decimalStyle.getDecimalSeparator());
+                }
+                // add leading zeros
+                for (int i = 9 - stringSize; i > 0; i--) {
+                    buf.append(zero);
+                }
+                // truncate unwanted digits
+                if (maxWidth < 9) {
+                    val /= TENS[9 - maxWidth];
+                }
+                // truncate zeros
+                for (int i = maxWidth; i > minWidth; i--) {
+                    if ((val % 10) != 0) {
+                        break;
+                    }
+                    val /= 10;
+                }
+                if (zero == '0') {
+                    buf.append(val);
+                } else {
+                    buf.append(decimalStyle.convertNumberToI18N(Integer.toString(val)));
+                }
+            }
+            return true;
+        }
+
+        @Override
+        public int parse(DateTimeParseContext context, CharSequence text, int position) {
+            int effectiveMin = (context.isStrict() || isFixedWidth(context) ? minWidth : 0);
+            int effectiveMax = (context.isStrict() || isFixedWidth(context) ? maxWidth : 9);
+            int length = text.length();
+            if (position == length) {
+                // valid if whole field is optional, invalid if minimum width
+                return (effectiveMin > 0 ? ~position : position);
+            }
+            if (decimalPoint) {
+                if (text.charAt(position) != context.getDecimalStyle().getDecimalSeparator()) {
+                    // valid if whole field is optional, invalid if minimum width
+                    return (effectiveMin > 0 ? ~position : position);
+                }
+                position++;
+            }
+            int minEndPos = position + effectiveMin;
+            if (minEndPos > length) {
+                return ~position;  // need at least min width digits
+            }
+            int maxEndPos = Math.min(position + effectiveMax, length);
+            int total = 0;  // can use int because we are only parsing up to 9 digits
+            int pos = position;
+            while (pos < maxEndPos) {
+                char ch = text.charAt(pos);
+                int digit = context.getDecimalStyle().convertToDigit(ch);
+                if (digit < 0) {
+                    if (pos < minEndPos) {
+                        return ~position;  // need at least min width digits
+                    }
+                    break;
+                }
+                pos++;
+                total = total * 10 + digit;
+            }
+            for (int i = 9 - (pos - position); i > 0; i--) {
+                total *= 10;
+            }
+            return context.setParsedField(field, total, position, pos);
+        }
+
+        @Override
+        public String toString() {
+            String decimal = (decimalPoint ? ",DecimalPoint" : "");
+            return "Fraction(" + field + "," + minWidth + "," + maxWidth + decimal + ")";
+        }
+    }
+
+    //-----------------------------------------------------------------------
+    /**
      * Prints and parses a numeric date-time field with optional padding.
      */
     static final class FractionPrinterParser extends NumberPrinterParser {
         private final boolean decimalPoint;
+        private final BigDecimal minBD;
+        private final BigDecimal rangeBD;
 
         /**
          * Constructor.
@@ -3072,7 +3507,7 @@ public final class DateTimeFormatterBuilder {
          * @param maxWidth  the maximum width to output, from 0 to 9
          * @param decimalPoint  whether to output the localized decimal point symbol
          */
-        FractionPrinterParser(TemporalField field, int minWidth, int maxWidth, boolean decimalPoint) {
+        private FractionPrinterParser(TemporalField field, int minWidth, int maxWidth, boolean decimalPoint) {
             this(field, minWidth, maxWidth, decimalPoint, 0);
             Objects.requireNonNull(field, "field");
             if (field.range().isFixed() == false) {
@@ -3099,9 +3534,12 @@ public final class DateTimeFormatterBuilder {
          * @param decimalPoint  whether to output the localized decimal point symbol
          * @param subsequentWidth the subsequentWidth for this instance
          */
-        FractionPrinterParser(TemporalField field, int minWidth, int maxWidth, boolean decimalPoint, int subsequentWidth) {
+        private FractionPrinterParser(TemporalField field, int minWidth, int maxWidth, boolean decimalPoint, int subsequentWidth) {
             super(field, minWidth, maxWidth, SignStyle.NOT_NEGATIVE, subsequentWidth);
             this.decimalPoint = decimalPoint;
+            ValueRange range = field.range();
+            this.minBD = BigDecimal.valueOf(range.getMinimum());
+            this.rangeBD = BigDecimal.valueOf(range.getMaximum()).subtract(minBD).add(BigDecimal.ONE);
         }
 
         /**
@@ -3129,11 +3567,11 @@ public final class DateTimeFormatterBuilder {
         }
 
         /**
-         * For FractionPrinterPrinterParser, the width is fixed if context is sttrict,
+         * For FractionPrinterPrinterParser, the width is fixed if context is strict,
          * minWidth equal to maxWidth and decimalpoint is absent.
          * @param context the context
          * @return if the field is fixed width
-         * @see DateTimeFormatterBuilder#appendValueFraction(java.time.temporal.TemporalField, int, int, boolean)
+         * @see #appendFraction(java.time.temporal.TemporalField, int, int, boolean)
          */
         @Override
         boolean isFixedWidth(DateTimeParseContext context) {
@@ -3161,14 +3599,14 @@ public final class DateTimeFormatterBuilder {
                     }
                 }
             } else {
-                int outputScale = Math.min(Math.max(fraction.scale(), minWidth), maxWidth);
+                int outputScale = Math.clamp(fraction.scale(), minWidth, maxWidth);
                 fraction = fraction.setScale(outputScale, RoundingMode.FLOOR);
-                String str = fraction.toPlainString().substring(2);
-                str = decimalStyle.convertNumberToI18N(str);
                 if (decimalPoint) {
                     buf.append(decimalStyle.getDecimalSeparator());
                 }
-                buf.append(str);
+                String str = fraction.toPlainString();
+                str = decimalStyle.convertNumberToI18N(str);
+                buf.append(str, 2, str.length());
             }
             return true;
         }
@@ -3230,10 +3668,7 @@ public final class DateTimeFormatterBuilder {
          * @throws DateTimeException if the value cannot be converted to a fraction
          */
         private BigDecimal convertToFraction(long value) {
-            ValueRange range = field.range();
-            range.checkValidValue(value, field);
-            BigDecimal minBD = BigDecimal.valueOf(range.getMinimum());
-            BigDecimal rangeBD = BigDecimal.valueOf(range.getMaximum()).subtract(minBD).add(BigDecimal.ONE);
+            field.range().checkValidValue(value, field);
             BigDecimal valueBD = BigDecimal.valueOf(value).subtract(minBD);
             BigDecimal fraction = valueBD.divide(rangeBD, 9, RoundingMode.FLOOR);
             // stripTrailingZeros bug
@@ -3257,9 +3692,6 @@ public final class DateTimeFormatterBuilder {
          * @throws DateTimeException if the value cannot be converted
          */
         private long convertFromFraction(BigDecimal fraction) {
-            ValueRange range = field.range();
-            BigDecimal minBD = BigDecimal.valueOf(range.getMinimum());
-            BigDecimal rangeBD = BigDecimal.valueOf(range.getMaximum()).subtract(minBD).add(BigDecimal.ONE);
             BigDecimal valueBD = fraction.multiply(rangeBD).setScale(0, RoundingMode.FLOOR).add(minBD);
             return valueBD.longValueExact();
         }
@@ -3292,7 +3724,7 @@ public final class DateTimeFormatterBuilder {
          * @param textStyle  the text style, not null
          * @param provider  the text provider, not null
          */
-        TextPrinterParser(TemporalField field, TextStyle textStyle, DateTimeTextProvider provider) {
+        private TextPrinterParser(TemporalField field, TextStyle textStyle, DateTimeTextProvider provider) {
             // validated by caller
             this.field = field;
             this.textStyle = textStyle;
@@ -3390,7 +3822,7 @@ public final class DateTimeFormatterBuilder {
         private static final long SECONDS_0000_TO_1970 = ((146097L * 5L) - (30L * 365L + 7L)) * 86400L;
         private final int fractionalDigits;
 
-        InstantPrinterParser(int fractionalDigits) {
+        private InstantPrinterParser(int fractionalDigits) {
             this.fractionalDigits = fractionalDigits;
         }
 
@@ -3539,7 +3971,7 @@ public final class DateTimeFormatterBuilder {
          * @param pattern  the pattern
          * @param noOffsetText  the text to use for UTC, not null
          */
-        OffsetIdPrinterParser(String pattern, String noOffsetText) {
+        private OffsetIdPrinterParser(String pattern, String noOffsetText) {
             Objects.requireNonNull(pattern, "pattern");
             Objects.requireNonNull(noOffsetText, "noOffsetText");
             this.type = checkPattern(pattern);
@@ -4021,7 +4453,7 @@ public final class DateTimeFormatterBuilder {
 
         /**  Display in generic time-zone format. True in case of pattern letter 'v' */
         private final boolean isGeneric;
-        ZoneTextPrinterParser(TextStyle textStyle, Set<ZoneId> preferredZones, boolean isGeneric) {
+        private ZoneTextPrinterParser(TextStyle textStyle, Set<ZoneId> preferredZones, boolean isGeneric) {
             super(TemporalQueries.zone(), "ZoneText(" + textStyle + ")");
             this.textStyle = Objects.requireNonNull(textStyle, "textStyle");
             this.isGeneric = isGeneric;
@@ -4033,9 +4465,10 @@ public final class DateTimeFormatterBuilder {
             }
         }
 
-        private static final int STD = 0;
-        private static final int DST = 1;
-        private static final int GENERIC = 2;
+        static final int UNDEFINED = -1;
+        static final int STD = 0;
+        static final int DST = 1;
+        static final int GENERIC = 2;
         private static final Map<String, SoftReference<Map<Locale, String[]>>> cache =
             new ConcurrentHashMap<>();
 
@@ -4069,13 +4502,11 @@ public final class DateTimeFormatterBuilder {
                 perLocale.put(locale, names);
                 cache.put(id, new SoftReference<>(perLocale));
             }
-            switch (type) {
-            case STD:
-                return names[textStyle.zoneNameStyleIndex() + 1];
-            case DST:
-                return names[textStyle.zoneNameStyleIndex() + 3];
-            }
-            return names[textStyle.zoneNameStyleIndex() + 5];
+            return switch (type) {
+                case STD -> names[textStyle.zoneNameStyleIndex() + 1];
+                case DST -> names[textStyle.zoneNameStyleIndex() + 3];
+                default  -> names[textStyle.zoneNameStyleIndex() + 5];
+            };
         }
 
         @Override
@@ -4112,9 +4543,9 @@ public final class DateTimeFormatterBuilder {
 
         // cache per instance for now
         private final Map<Locale, Entry<Integer, SoftReference<PrefixTree>>>
-            cachedTree = new HashMap<>();
+            cachedTree = HashMap.newHashMap(1);
         private final Map<Locale, Entry<Integer, SoftReference<PrefixTree>>>
-            cachedTreeCI = new HashMap<>();
+            cachedTreeCI = HashMap.newHashMap(1);
 
         @Override
         protected PrefixTree getTree(DateTimeParseContext context) {
@@ -4123,9 +4554,8 @@ public final class DateTimeFormatterBuilder {
             }
             Locale locale = context.getLocale();
             boolean isCaseSensitive = context.isCaseSensitive();
-            Set<String> regionIds = new HashSet<>(ZoneRulesProvider.getAvailableZoneIds());
-            Set<String> nonRegionIds = new HashSet<>(64);
-            int regionIdsSize = regionIds.size();
+            Set<String> availableZoneIds = ZoneRulesProvider.getAvailableZoneIds();
+            int regionIdsSize = availableZoneIds.size();
 
             Map<Locale, Entry<Integer, SoftReference<PrefixTree>>> cached =
                 isCaseSensitive ? cachedTree : cachedTreeCI;
@@ -4138,17 +4568,19 @@ public final class DateTimeFormatterBuilder {
                 (tree = entry.getValue().get()) == null)) {
                 tree = PrefixTree.newTree(context);
                 zoneStrings = TimeZoneNameUtility.getZoneStrings(locale);
+                Set<String> nonRegionIds = HashSet.newHashSet(64);
+                Set<String> regionIds = new HashSet<>(availableZoneIds);
                 for (String[] names : zoneStrings) {
                     String zid = names[0];
                     if (!regionIds.remove(zid)) {
                         nonRegionIds.add(zid);
                         continue;
                     }
-                    tree.add(zid, zid);    // don't convert zid -> metazone
+                    tree.add(zid, zid, UNDEFINED);    // don't convert zid -> metazone
                     zid = ZoneName.toZid(zid, locale);
                     int i = textStyle == TextStyle.FULL ? 1 : 2;
                     for (; i < names.length; i += 2) {
-                        tree.add(names[i], zid);
+                        tree.add(names[i], zid, (i - 1) / 2);
                     }
                 }
 
@@ -4161,7 +4593,7 @@ public final class DateTimeFormatterBuilder {
                         int i = textStyle == TextStyle.FULL ? 1 : 2;
                         for (; i < cidNames.length; i += 2) {
                             if (cidNames[i] != null && !cidNames[i].isEmpty()) {
-                                t.add(cidNames[i], cid);
+                                t.add(cidNames[i], cid, (i - 1) / 2);
                             }
                         }
                     });
@@ -4176,7 +4608,7 @@ public final class DateTimeFormatterBuilder {
                         }
                         int i = textStyle == TextStyle.FULL ? 1 : 2;
                         for (; i < names.length; i += 2) {
-                            tree.add(names[i], zid);
+                            tree.add(names[i], zid, (i - 1) / 2);
                        }
                     }
                 }
@@ -4194,7 +4626,7 @@ public final class DateTimeFormatterBuilder {
         private final TemporalQuery<ZoneId> query;
         private final String description;
 
-        ZoneIdPrinterParser(TemporalQuery<ZoneId> query, String description) {
+        private ZoneIdPrinterParser(TemporalQuery<ZoneId> query, String description) {
             this.query = query;
             this.description = description;
         }
@@ -4262,8 +4694,14 @@ public final class DateTimeFormatterBuilder {
                     if (length >= position + 3 && context.charEquals(text.charAt(position + 2), 'C')) {
                         // There are localized zone texts that start with "UTC", e.g.
                         // "UTC\u221210:00" (MINUS SIGN instead of HYPHEN-MINUS) in French.
-                        // Exclude those ZoneText cases.
-                        if (!(this instanceof ZoneTextPrinterParser)) {
+                        // Treat them as normal '-' with the offset parser (using text parser would
+                        // be problematic due to std/dst distinction)
+                        if (length > position + 3 && context.charEquals(text.charAt(position + 3), '\u2212')) {
+                            var tmpText = "%s-%s".formatted(
+                                    text.subSequence(0, position + 3),
+                                    text.subSequence(position + 4, text.length()));
+                            return parseOffsetBased(context, tmpText, position, position + 3, OffsetIdPrinterParser.INSTANCE_ID_ZERO);
+                        } else {
                             return parseOffsetBased(context, text, position, position + 3, OffsetIdPrinterParser.INSTANCE_ID_ZERO);
                         }
                     } else {
@@ -4282,15 +4720,16 @@ public final class DateTimeFormatterBuilder {
             // parse
             PrefixTree tree = getTree(context);
             ParsePosition ppos = new ParsePosition(position);
-            String parsedZoneId = tree.match(text, ppos);
-            if (parsedZoneId == null) {
+            PrefixTree parsedZoneId = tree.match(text, ppos);
+            if (parsedZoneId.value == null) {
                 if (context.charEquals(nextChar, 'Z')) {
                     context.setParsed(ZoneOffset.UTC);
                     return position + 1;
                 }
                 return ~position;
             }
-            context.setParsed(ZoneId.of(parsedZoneId));
+            context.setParsed(ZoneId.of(parsedZoneId.value));
+            context.setParsedZoneNameType(parsedZoneId.type);
             return ppos.getIndex();
         }
 
@@ -4307,7 +4746,7 @@ public final class DateTimeFormatterBuilder {
          * @return the position after the parse
          */
         private int parseOffsetBased(DateTimeParseContext context, CharSequence text, int prefixPos, int position, OffsetIdPrinterParser parser) {
-            String prefix = text.subSequence(prefixPos, position).toString().toUpperCase();
+            String prefix = text.subSequence(prefixPos, position).toString().toUpperCase(Locale.ROOT);
             if (position >= text.length()) {
                 context.setParsed(ZoneId.of(prefix));
                 return position;
@@ -4352,14 +4791,16 @@ public final class DateTimeFormatterBuilder {
     static class PrefixTree {
         protected String key;
         protected String value;
+        protected int type;
         protected char c0;    // performance optimization to avoid the
                               // boundary check cost of key.charat(0)
         protected PrefixTree child;
         protected PrefixTree sibling;
 
-        private PrefixTree(String k, String v, PrefixTree child) {
+        private PrefixTree(String k, String v, int type, PrefixTree child) {
             this.key = k;
             this.value = v;
+            this.type = type;
             this.child = child;
             if (k.isEmpty()) {
                 c0 = 0xffff;
@@ -4375,13 +4816,10 @@ public final class DateTimeFormatterBuilder {
          * @return the tree, not null
          */
         public static PrefixTree newTree(DateTimeParseContext context) {
-            //if (!context.isStrict()) {
-            //    return new LENIENT("", null, null);
-            //}
             if (context.isCaseSensitive()) {
-                return new PrefixTree("", null, null);
+                return new PrefixTree("", null, ZoneTextPrinterParser.UNDEFINED, null);
             }
-            return new CI("", null, null);
+            return new CI("", null, ZoneTextPrinterParser.UNDEFINED, null);
         }
 
         /**
@@ -4394,7 +4832,7 @@ public final class DateTimeFormatterBuilder {
         public static  PrefixTree newTree(Set<String> keys, DateTimeParseContext context) {
             PrefixTree tree = newTree(context);
             for (String k : keys) {
-                tree.add0(k, k);
+                tree.add0(k, k, ZoneTextPrinterParser.UNDEFINED);
             }
             return tree;
         }
@@ -4403,7 +4841,7 @@ public final class DateTimeFormatterBuilder {
          * Clone a copy of this tree
          */
         public PrefixTree copyTree() {
-            PrefixTree copy = new PrefixTree(key, value, null);
+            PrefixTree copy = new PrefixTree(key, value, type, null);
             if (child != null) {
                 copy.child = child.copyTree();
             }
@@ -4421,11 +4859,11 @@ public final class DateTimeFormatterBuilder {
          * @param v  the value, not null
          * @return  true if the pair is added successfully
          */
-        public boolean add(String k, String v) {
-            return add0(k, v);
+        public boolean add(String k, String v, int t) {
+            return add0(k, v, t);
         }
 
-        private boolean add0(String k, String v) {
+        private boolean add0(String k, String v, int t) {
             k = toKey(k);
             int prefixLen = prefixLength(k);
             if (prefixLen == key.length()) {
@@ -4434,12 +4872,12 @@ public final class DateTimeFormatterBuilder {
                     PrefixTree c = child;
                     while (c != null) {
                         if (isEqual(c.c0, subKey.charAt(0))) {
-                            return c.add0(subKey, v);
+                            return c.add0(subKey, v, t);
                         }
                         c = c.sibling;
                     }
                     // add the node as the child of the current node
-                    c = newNode(subKey, v, null);
+                    c = newNode(subKey, v, t, null);
                     c.sibling = child;
                     child = c;
                     return true;
@@ -4449,18 +4887,20 @@ public final class DateTimeFormatterBuilder {
                 //    return false;
                 //}
                 value = v;
+                type = t;
                 return true;
             }
             // split the existing node
-            PrefixTree n1 = newNode(key.substring(prefixLen), value, child);
+            PrefixTree n1 = newNode(key.substring(prefixLen), value, type, child);
             key = k.substring(0, prefixLen);
             child = n1;
             if (prefixLen < k.length()) {
-                PrefixTree n2 = newNode(k.substring(prefixLen), v, null);
+                PrefixTree n2 = newNode(k.substring(prefixLen), v, t, null);
                 child.sibling = n2;
                 value = null;
             } else {
                 value = v;
+                type = t;
             }
             return true;
         }
@@ -4471,9 +4911,9 @@ public final class DateTimeFormatterBuilder {
          * @param text  the input text to parse, not null
          * @param off  the offset position to start parsing at
          * @param end  the end position to stop parsing
-         * @return the resulting string, or null if no match found.
+         * @return the resulting tree, or null if no match found.
          */
-        public String match(CharSequence text, int off, int end) {
+        public PrefixTree match(CharSequence text, int off, int end) {
             if (!prefixOf(text, off, end)){
                 return null;
             }
@@ -4481,16 +4921,16 @@ public final class DateTimeFormatterBuilder {
                 PrefixTree c = child;
                 do {
                     if (isEqual(c.c0, text.charAt(off))) {
-                        String found = c.match(text, off, end);
+                        PrefixTree found = c.match(text, off, end);
                         if (found != null) {
                             return found;
                         }
-                        return value;
+                        return this;
                     }
                     c = c.sibling;
                 } while (c != null);
             }
-            return value;
+            return this;
         }
 
         /**
@@ -4500,9 +4940,9 @@ public final class DateTimeFormatterBuilder {
          * @param pos  the position to start parsing at, from 0 to the text
          *  length. Upon return, position will be updated to the new parse
          *  position, or unchanged, if no match found.
-         * @return the resulting string, or null if no match found.
+         * @return the resulting tree, or null if no match found.
          */
-        public String match(CharSequence text, ParsePosition pos) {
+        public PrefixTree match(CharSequence text, ParsePosition pos) {
             int off = pos.getIndex();
             int end = text.length();
             if (!prefixOf(text, off, end)){
@@ -4514,7 +4954,7 @@ public final class DateTimeFormatterBuilder {
                 do {
                     if (isEqual(c.c0, text.charAt(off))) {
                         pos.setIndex(off);
-                        String found = c.match(text, pos);
+                        PrefixTree found = c.match(text, pos);
                         if (found != null) {
                             return found;
                         }
@@ -4524,15 +4964,15 @@ public final class DateTimeFormatterBuilder {
                 } while (c != null);
             }
             pos.setIndex(off);
-            return value;
+            return this;
         }
 
         protected String toKey(String k) {
             return k;
         }
 
-        protected PrefixTree newNode(String k, String v, PrefixTree child) {
-            return new PrefixTree(k, v, child);
+        protected PrefixTree newNode(String k, String v, int t, PrefixTree child) {
+            return new PrefixTree(k, v, t, child);
         }
 
         protected boolean isEqual(char c1, char c2) {
@@ -4572,13 +5012,13 @@ public final class DateTimeFormatterBuilder {
          */
         private static class CI extends PrefixTree {
 
-            private CI(String k, String v, PrefixTree child) {
-                super(k, v, child);
+            private CI(String k, String v, int t, PrefixTree child) {
+                super(k, v, t, child);
             }
 
             @Override
-            protected CI newNode(String k, String v, PrefixTree child) {
-                return new CI(k, v, child);
+            protected CI newNode(String k, String v, int t, PrefixTree child) {
+                return new CI(k, v, t, child);
             }
 
             @Override
@@ -4601,86 +5041,6 @@ public final class DateTimeFormatterBuilder {
                 return true;
             }
         }
-
-        /**
-         * Lenient prefix tree. Case insensitive and ignores characters
-         * like space, underscore and slash.
-         */
-        private static class LENIENT extends CI {
-
-            private LENIENT(String k, String v, PrefixTree child) {
-                super(k, v, child);
-            }
-
-            @Override
-            protected CI newNode(String k, String v, PrefixTree child) {
-                return new LENIENT(k, v, child);
-            }
-
-            private boolean isLenientChar(char c) {
-                return c == ' ' || c == '_' || c == '/';
-            }
-
-            protected String toKey(String k) {
-                for (int i = 0; i < k.length(); i++) {
-                    if (isLenientChar(k.charAt(i))) {
-                        StringBuilder sb = new StringBuilder(k.length());
-                        sb.append(k, 0, i);
-                        i++;
-                        while (i < k.length()) {
-                            if (!isLenientChar(k.charAt(i))) {
-                                sb.append(k.charAt(i));
-                            }
-                            i++;
-                        }
-                        return sb.toString();
-                    }
-                }
-                return k;
-            }
-
-            @Override
-            public String match(CharSequence text, ParsePosition pos) {
-                int off = pos.getIndex();
-                int end = text.length();
-                int len = key.length();
-                int koff = 0;
-                while (koff < len && off < end) {
-                    if (isLenientChar(text.charAt(off))) {
-                        off++;
-                        continue;
-                    }
-                    if (!isEqual(key.charAt(koff++), text.charAt(off++))) {
-                        return null;
-                    }
-                }
-                if (koff != len) {
-                    return null;
-                }
-                if (child != null && off != end) {
-                    int off0 = off;
-                    while (off0 < end && isLenientChar(text.charAt(off0))) {
-                        off0++;
-                    }
-                    if (off0 < end) {
-                        PrefixTree c = child;
-                        do {
-                            if (isEqual(c.c0, text.charAt(off0))) {
-                                pos.setIndex(off0);
-                                String found = c.match(text, pos);
-                                if (found != null) {
-                                    return found;
-                                }
-                                break;
-                            }
-                            c = c.sibling;
-                        } while (c != null);
-                    }
-                }
-                pos.setIndex(off);
-                return value;
-            }
-        }
     }
 
     //-----------------------------------------------------------------------
@@ -4691,7 +5051,7 @@ public final class DateTimeFormatterBuilder {
         /** The text style to output, null means the ID. */
         private final TextStyle textStyle;
 
-        ChronoPrinterParser(TextStyle textStyle) {
+        private ChronoPrinterParser(TextStyle textStyle) {
             // validated by caller
             this.textStyle = textStyle;
         }
@@ -4766,6 +5126,7 @@ public final class DateTimeFormatterBuilder {
 
         private final FormatStyle dateStyle;
         private final FormatStyle timeStyle;
+        private final String requestedTemplate;
 
         /**
          * Constructor.
@@ -4773,10 +5134,23 @@ public final class DateTimeFormatterBuilder {
          * @param dateStyle  the date style to use, may be null
          * @param timeStyle  the time style to use, may be null
          */
-        LocalizedPrinterParser(FormatStyle dateStyle, FormatStyle timeStyle) {
-            // validated by caller
+        private LocalizedPrinterParser(FormatStyle dateStyle, FormatStyle timeStyle) {
+            // params validated by caller
             this.dateStyle = dateStyle;
             this.timeStyle = timeStyle;
+            this.requestedTemplate = null;
+        }
+
+        /**
+         * Constructor.
+         *
+         * @param requestedTemplate the requested template to use, not null
+         */
+        private LocalizedPrinterParser(String requestedTemplate) {
+            // param validated by caller
+            this.dateStyle = null;
+            this.timeStyle = null;
+            this.requestedTemplate = requestedTemplate;
         }
 
         @Override
@@ -4794,7 +5168,8 @@ public final class DateTimeFormatterBuilder {
         /**
          * Gets the formatter to use.
          * <p>
-         * The formatter will be the most appropriate to use for the date and time style in the locale.
+         * The formatter will be the most appropriate to use for the date and time style, or
+         * the requested template for the locale.
          * For example, some locales will use the month name while others will use the number.
          *
          * @param locale  the locale to use, not null
@@ -4803,23 +5178,22 @@ public final class DateTimeFormatterBuilder {
          * @throws IllegalArgumentException if the formatter cannot be found
          */
         private DateTimeFormatter formatter(Locale locale, Chronology chrono) {
-            String key = chrono.getId() + '|' + locale.toString() + '|' + dateStyle + timeStyle;
-            DateTimeFormatter formatter = FORMATTER_CACHE.get(key);
-            if (formatter == null) {
-                String pattern = getLocalizedDateTimePattern(dateStyle, timeStyle, chrono, locale);
-                formatter = new DateTimeFormatterBuilder().appendPattern(pattern).toFormatter(locale);
-                DateTimeFormatter old = FORMATTER_CACHE.putIfAbsent(key, formatter);
-                if (old != null) {
-                    formatter = old;
-                }
-            }
-            return formatter;
+            String key = chrono.getId() + '|' + locale.toString() + '|' +
+                    (requestedTemplate != null ? requestedTemplate : Objects.toString(dateStyle) + timeStyle);
+
+            return FORMATTER_CACHE.computeIfAbsent(key, k ->
+                new DateTimeFormatterBuilder()
+                    .appendPattern(requestedTemplate != null ?
+                        getLocalizedDateTimePattern(requestedTemplate, chrono, locale) :
+                        getLocalizedDateTimePattern(dateStyle, timeStyle, chrono, locale))
+                    .toFormatter(locale));
         }
 
         @Override
         public String toString() {
-            return "Localized(" + (dateStyle != null ? dateStyle : "") + "," +
-                (timeStyle != null ? timeStyle : "") + ")";
+            return "Localized(" + (requestedTemplate != null ? requestedTemplate :
+                (dateStyle != null ? dateStyle : "") + "," +
+                (timeStyle != null ? timeStyle : "")) + ")";
         }
     }
 
@@ -4844,7 +5218,7 @@ public final class DateTimeFormatterBuilder {
          * @param minWidth  the minimum field width, from 1 to 19
          * @param maxWidth  the maximum field width, from minWidth to 19
          */
-        WeekBasedFieldPrinterParser(char chr, int count, int minWidth, int maxWidth) {
+        private WeekBasedFieldPrinterParser(char chr, int count, int minWidth, int maxWidth) {
             this(chr, count, minWidth, maxWidth, 0);
         }
 
@@ -4858,7 +5232,7 @@ public final class DateTimeFormatterBuilder {
          * @param subsequentWidth  the width of subsequent non-negative numbers, 0 or greater,
          * -1 if fixed width due to active adjacent parsing
          */
-        WeekBasedFieldPrinterParser(char chr, int count, int minWidth, int maxWidth,
+        private WeekBasedFieldPrinterParser(char chr, int count, int minWidth, int maxWidth,
                 int subsequentWidth) {
             super(null, minWidth, maxWidth, SignStyle.NOT_NEGATIVE, subsequentWidth);
             this.chr = chr;
@@ -4975,14 +5349,296 @@ public final class DateTimeFormatterBuilder {
         }
     }
 
-    //-------------------------------------------------------------------------
+    //-----------------------------------------------------------------------
+
     /**
-     * Length comparator.
+     * Prints or parses day periods.
      */
-    static final Comparator<String> LENGTH_SORT = new Comparator<String>() {
-        @Override
-        public int compare(String str1, String str2) {
-            return str1.length() == str2.length() ? str1.compareTo(str2) : str1.length() - str2.length();
+    static final class DayPeriodPrinterParser implements DateTimePrinterParser {
+        private final TextStyle textStyle;
+        private static final ConcurrentMap<Locale, LocaleStore> DAYPERIOD_LOCALESTORE = new ConcurrentHashMap<>();
+
+        /**
+         * Constructor.
+         *
+         * @param textStyle  the text style, not null
+         */
+        private DayPeriodPrinterParser(TextStyle textStyle) {
+            // validated by caller
+            this.textStyle = textStyle;
         }
-    };
+
+        @Override
+        public boolean format(DateTimePrintContext context, StringBuilder buf) {
+            Long hod = context.getValue(HOUR_OF_DAY);
+            if (hod == null) {
+                return false;
+            }
+            Long moh = context.getValue(MINUTE_OF_HOUR);
+            long value = Math.floorMod(hod, 24) * 60 + (moh != null ? Math.floorMod(moh, 60) : 0);
+            Locale locale = context.getLocale();
+            LocaleStore store = findDayPeriodStore(locale);
+            final long val = value;
+            final var map = DayPeriod.getDayPeriodMap(locale);
+            value = map.keySet().stream()
+                    .filter(k -> k.includes(val))
+                    .min(DayPeriod.DPCOMPARATOR)
+                    .map(map::get)
+                    .orElse(val / 720); // fall back to am/pm
+            String text = store.getText(value, textStyle);
+            buf.append(text);
+            return true;
+        }
+
+        @Override
+        public int parse(DateTimeParseContext context, CharSequence parseText, int position) {
+            int length = parseText.length();
+            if (position < 0 || position > length) {
+                throw new IndexOutOfBoundsException();
+            }
+            TextStyle style = (context.isStrict() ? textStyle : null);
+            Iterator<Entry<String, Long>> it;
+            LocaleStore store = findDayPeriodStore(context.getLocale());
+            it = store.getTextIterator(style);
+            if (it != null) {
+                while (it.hasNext()) {
+                    Entry<String, Long> entry = it.next();
+                    String itText = entry.getKey();
+                    if (context.subSequenceEquals(itText, 0, parseText, position, itText.length())) {
+                        context.setParsedDayPeriod(DayPeriod.ofLocale(context.getLocale(), entry.getValue()));
+                        return position + itText.length();
+                    }
+                }
+            }
+            return ~position;
+        }
+
+        @Override
+        public String toString() {
+            return "DayPeriod(" + textStyle + ")";
+        }
+
+        /**
+         * Returns the day period locale store for the locale
+         * @param locale locale to be examined
+         * @return locale store for the locale
+         */
+        private static LocaleStore findDayPeriodStore(Locale locale) {
+            return DAYPERIOD_LOCALESTORE.computeIfAbsent(locale, loc -> {
+                Map<TextStyle, Map<Long, String>> styleMap = new HashMap<>();
+
+                for (TextStyle textStyle : TextStyle.values()) {
+                    if (textStyle.isStandalone()) {
+                        // Stand-alone isn't applicable to day period.
+                        continue;
+                    }
+
+                    Map<Long, String> map = new HashMap<>();
+                    int calStyle = textStyle.toCalendarStyle();
+                    var periodMap = DayPeriod.getDayPeriodMap(loc);
+                    periodMap.forEach((key, value) -> {
+                        String displayName = CalendarDataUtility.retrieveJavaTimeFieldValueName(
+                                "gregory", Calendar.AM_PM, value.intValue(), calStyle, loc);
+                        if (displayName != null) {
+                            map.put(value, displayName);
+                        } else {
+                            periodMap.remove(key);
+                        }
+                    });
+                    if (!map.isEmpty()) {
+                        styleMap.put(textStyle, map);
+                    }
+                }
+                return new LocaleStore(styleMap);
+            });
+        }
+    }
+
+    /**
+     * DayPeriod class that represents a
+     * <a href="https://www.unicode.org/reports/tr35/tr35-dates.html#dayPeriods">DayPeriod</a> defined in CLDR.
+     * This is a value-based class.
+     */
+    static final class DayPeriod {
+        /**
+         *  DayPeriod cache
+         */
+        private static final Map<Locale, Map<DayPeriod, Long>> DAYPERIOD_CACHE = new ConcurrentHashMap<>();
+        /**
+         * comparator based on the duration of the day period.
+         */
+        private static final Comparator<DayPeriod> DPCOMPARATOR = (dp1, dp2) -> (int)(dp1.duration() - dp2.duration());
+        /**
+         * Pattern to parse day period rules
+         */
+        private static final Pattern RULE = Pattern.compile("(?<type>[a-z12]+):(?<from>\\d{2}):00(-(?<to>\\d{2}))*");
+        /**
+         * minute-of-day of "at" or "from" attribute
+         */
+        private final long from;
+        /**
+         * minute-of-day of "before" attribute (exclusive), or if it is
+         * the same value with "from", it indicates this day period
+         * designates "fixed" periods, i.e, "midnight" or "noon"
+         */
+        private final long to;
+        /**
+         * day period type index. (cf. {@link #mapToIndex})
+         */
+        private final long index;
+
+        /**
+         * Sole constructor
+         *
+         * @param from "from" in minute-of-day
+         * @param to "to" in minute-of-day
+         * @param index day period type index
+         */
+        private DayPeriod(long from, long to, long index) {
+            this.from = from;
+            this.to = to;
+            this.index = index;
+        }
+
+        /**
+         * Gets the index of this day period
+         *
+         * @return index
+         */
+        long getIndex() {
+            return index;
+        }
+
+        /**
+         * Returns the midpoint of this day period in minute-of-day
+         * @return midpoint
+         */
+        long mid() {
+            return (from + duration() / 2) % 1_440;
+        }
+
+        /**
+         * Checks whether the passed minute-of-day is within this
+         * day period or not.
+         *
+         * @param mod minute-of-day to check
+         * @return true if {@code mod} is within this day period
+         */
+        boolean includes(long mod) {
+            // special check for 24:00 for midnight in hour-of-day
+            if (from == 0 && to == 0 && mod == 1_440) {
+                return true;
+            }
+            return (from == mod && to == mod || // midnight/noon
+                    from <= mod && mod < to || // contiguous from-to
+                    from > to && (from <= mod || to > mod)); // beyond midnight
+        }
+
+        /**
+         * Calculates the duration of this day period
+         * @return the duration in minutes
+         */
+        private long duration() {
+            return from > to ? 1_440 - from + to: to - from;
+        }
+
+        /**
+         * Maps the day period type defined in LDML to the index to the am/pm array
+         * returned from the Calendar resource bundle.
+         *
+         * @param type day period type defined in LDML
+         * @return the array index
+         */
+        static long mapToIndex(String type) {
+            return switch (type) {
+                case "am"           -> Calendar.AM;
+                case "pm"           -> Calendar.PM;
+                case "midnight"     -> 2;
+                case "noon"         -> 3;
+                case "morning1"     -> 4;
+                case "morning2"     -> 5;
+                case "afternoon1"   -> 6;
+                case "afternoon2"   -> 7;
+                case "evening1"     -> 8;
+                case "evening2"     -> 9;
+                case "night1"       -> 10;
+                case "night2"       -> 11;
+                default -> throw new InternalError("invalid day period type");
+            };
+        }
+
+        /**
+         * Returns the DayPeriod to array index map for a locale.
+         *
+         * @param locale  the locale, not null
+         * @return the DayPeriod to type index map
+         */
+        static Map<DayPeriod, Long> getDayPeriodMap(Locale locale) {
+            return DAYPERIOD_CACHE.computeIfAbsent(locale, l -> {
+                LocaleResources lr = LocaleProviderAdapter.getResourceBundleBased()
+                        .getLocaleResources(CalendarDataUtility.findRegionOverride(l));
+                String dayPeriodRules = lr.getRules()[1];
+                final Map<DayPeriod, Long> periodMap = new ConcurrentHashMap<>();
+                Arrays.stream(dayPeriodRules.split(";"))
+                    .forEach(rule -> {
+                        Matcher m = RULE.matcher(rule);
+                        if (m.find()) {
+                            String from = m.group("from");
+                            String to = m.group("to");
+                            long index = DayPeriod.mapToIndex(m.group("type"));
+                            if (to == null) {
+                                to = from;
+                            }
+                            periodMap.putIfAbsent(
+                                new DayPeriod(
+                                    Long.parseLong(from) * 60,
+                                    Long.parseLong(to) * 60,
+                                        index),
+                                index);
+                        }
+                    });
+
+                // add am/pm
+                periodMap.putIfAbsent(new DayPeriod(0, 720, 0), 0L);
+                periodMap.putIfAbsent(new DayPeriod(720, 1_440, 1), 1L);
+                return periodMap;
+            });
+        }
+
+        /**
+         * Returns the DayPeriod singleton for the locale and index.
+         * @param locale desired locale
+         * @param index resource bundle array index
+         * @return a DayPeriod instance
+         */
+        static DayPeriod ofLocale(Locale locale, long index) {
+            return getDayPeriodMap(locale).keySet().stream()
+                .filter(dp -> dp.getIndex() == index)
+                .findAny()
+                .orElseThrow(() -> new DateTimeException(
+                    "DayPeriod could not be determined for the locale " +
+                    locale + " at type index " + index));
+        }
+
+        @Override
+        public boolean equals(Object o) {
+            if (this == o) return true;
+            if (o == null || getClass() != o.getClass()) return false;
+            DayPeriod dayPeriod = (DayPeriod) o;
+            return from == dayPeriod.from &&
+                    to == dayPeriod.to &&
+                    index == dayPeriod.index;
+        }
+
+        @Override
+        public int hashCode() {
+            return Objects.hash(from, to, index);
+        }
+
+        @Override
+        public String toString() {
+            return "DayPeriod(%02d:%02d".formatted(from / 60, from % 60) +
+                    (from == to ? ")" : "-%02d:%02d)".formatted(to / 60, to % 60));
+        }
+    }
 }
