@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -21,31 +21,42 @@
  * questions.
  */
 
+package gc.z;
+
 /**
  * @test TestGarbageCollectorMXBean
- * @requires vm.gc.Z & !vm.graal.enabled
+ * @requires vm.gc.ZGenerational
  * @summary Test ZGC garbage collector MXBean
  * @modules java.management
- * @run main/othervm -XX:+UseZGC -Xms256M -Xmx512M -Xlog:gc TestGarbageCollectorMXBean 256 512
- * @run main/othervm -XX:+UseZGC -Xms512M -Xmx512M -Xlog:gc TestGarbageCollectorMXBean 512 512
+ * @requires vm.compMode != "Xcomp"
+ * @run main/othervm -XX:+UseZGC -XX:+ZGenerational -Xms256M -Xmx512M -Xlog:gc gc.z.TestGarbageCollectorMXBean 256 512
+ * @run main/othervm -XX:+UseZGC -XX:+ZGenerational -Xms512M -Xmx512M -Xlog:gc gc.z.TestGarbageCollectorMXBean 512 512
  */
 
 import java.lang.management.ManagementFactory;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicLong;
 import javax.management.Notification;
-import javax.management.NotificationBroadcaster;
+import javax.management.NotificationEmitter;
 import javax.management.NotificationListener;
 import javax.management.openmbean.CompositeData;
 
 import com.sun.management.GarbageCollectionNotificationInfo;
 
 public class TestGarbageCollectorMXBean {
+    private static final long startTime = System.nanoTime();
+
+    private static void log(String msg) {
+        final String elapsedSeconds = String.format("%.3fs", (System.nanoTime() - startTime) / 1_000_000_000.0);
+        System.out.println("[" + elapsedSeconds + "] (" + Thread.currentThread().getName() + ") " + msg);
+    }
+
     public static void main(String[] args) throws Exception {
         final long M = 1024 * 1024;
         final long initialCapacity = Long.parseLong(args[0]) * M;
         final long maxCapacity = Long.parseLong(args[1]) * M;
         final AtomicInteger cycles = new AtomicInteger();
+        final AtomicInteger pauses = new AtomicInteger();
         final AtomicInteger errors = new AtomicInteger();
 
         final NotificationListener listener = (Notification notification, Object ignored) -> {
@@ -64,64 +75,149 @@ public class TestGarbageCollectorMXBean {
             final var startTime = info.getGcInfo().getStartTime();
             final var endTime = info.getGcInfo().getEndTime();
             final var duration = info.getGcInfo().getDuration();
-            final var memoryUsageBeforeGC = info.getGcInfo().getMemoryUsageBeforeGc().get("ZHeap");
-            final var memoryUsageAfterGC = info.getGcInfo().getMemoryUsageAfterGc().get("ZHeap");
+            final var youngMemoryUsageBeforeGC = info.getGcInfo().getMemoryUsageBeforeGc().get("ZGC Young Generation");
+            final var youngMemoryUsageAfterGC = info.getGcInfo().getMemoryUsageAfterGc().get("ZGC Young Generation");
+            final var oldMemoryUsageBeforeGC = info.getGcInfo().getMemoryUsageBeforeGc().get("ZGC Old Generation");
+            final var oldMemoryUsageAfterGC = info.getGcInfo().getMemoryUsageAfterGc().get("ZGC Old Generation");
 
-            System.out.println(name + " (" + type + ")");
-            System.out.println("                  Id: " + id);
-            System.out.println("              Action: " + action);
-            System.out.println("               Cause: " + cause);
-            System.out.println("           StartTime: " + startTime);
-            System.out.println("             EndTime: " + endTime);
-            System.out.println("            Duration: " + duration);
-            System.out.println(" MemoryUsageBeforeGC: " + memoryUsageBeforeGC);
-            System.out.println("  MemoryUsageAfterGC: " + memoryUsageAfterGC);
-            System.out.println();
+            log(name + " (" + type + ")");
+            log("                        Id: " + id);
+            log("                    Action: " + action);
+            log("                     Cause: " + cause);
+            log("                 StartTime: " + startTime);
+            log("                   EndTime: " + endTime);
+            log("                  Duration: " + duration);
+            log(" Young MemoryUsageBeforeGC: " + youngMemoryUsageBeforeGC);
+            log("  Young MemoryUsageAfterGC: " + youngMemoryUsageAfterGC);
+            log("   Old MemoryUsageBeforeGC: " + oldMemoryUsageBeforeGC);
+            log("    Old MemoryUsageAfterGC: " + oldMemoryUsageAfterGC);
+            log("");
 
-            if (name.equals("ZGC")) {
+            if (name.equals("ZGC Major Cycles")) {
                 cycles.incrementAndGet();
+
+                if (!action.equals("end of GC cycle")) {
+                    log("ERROR: Action");
+                    errors.incrementAndGet();
+                }
+
+                if (oldMemoryUsageBeforeGC.getInit() != 0) {
+                    log("ERROR: Old MemoryUsageBeforeGC.init");
+                    errors.incrementAndGet();
+                }
+
+                if (oldMemoryUsageBeforeGC.getUsed() > initialCapacity) {
+                    log("ERROR: Old MemoryUsageBeforeGC.used");
+                    errors.incrementAndGet();
+                }
+
+                if (oldMemoryUsageBeforeGC.getCommitted() != oldMemoryUsageBeforeGC.getUsed()) {
+                    log("ERROR: Old MemoryUsageBeforeGC.committed");
+                    errors.incrementAndGet();
+                }
+
+                if (oldMemoryUsageBeforeGC.getMax() != maxCapacity) {
+                    log("ERROR: Old MemoryUsageBeforeGC.max");
+                    errors.incrementAndGet();
+                }
+            } else if (name.equals("ZGC Major Pauses")) {
+                pauses.incrementAndGet();
+
+                if (!action.equals("end of GC pause")) {
+                    log("ERROR: Action");
+                    errors.incrementAndGet();
+                }
+
+                if (oldMemoryUsageBeforeGC.getInit() != 0) {
+                    log("ERROR: Old MemoryUsageBeforeGC.init");
+                    errors.incrementAndGet();
+                }
+
+                if (oldMemoryUsageBeforeGC.getUsed() != 0) {
+                    log("ERROR: Old MemoryUsageBeforeGC.used");
+                    errors.incrementAndGet();
+                }
+
+                if (oldMemoryUsageBeforeGC.getCommitted() != 0) {
+                    log("ERROR: Old MemoryUsageBeforeGC.committed");
+                    errors.incrementAndGet();
+                }
+
+                if (oldMemoryUsageBeforeGC.getMax() != 0) {
+                    log("ERROR: Old MemoryUsageBeforeGC.max");
+                    errors.incrementAndGet();
+                }
+            } else if (name.equals("ZGC Minor Cycles")) {
+                cycles.incrementAndGet();
+
+                if (!action.equals("end of GC cycle")) {
+                    log("ERROR: Action");
+                    errors.incrementAndGet();
+                }
+
+                if (youngMemoryUsageBeforeGC.getInit() != initialCapacity) {
+                    log("ERROR: Young MemoryUsageBeforeGC.init");
+                    errors.incrementAndGet();
+                }
+
+                if (youngMemoryUsageBeforeGC.getUsed() > youngMemoryUsageBeforeGC.getCommitted()) {
+                    log("ERROR: Young MemoryUsageBeforeGC.used");
+                    errors.incrementAndGet();
+                }
+
+                if (youngMemoryUsageBeforeGC.getCommitted() > initialCapacity) {
+                    log("ERROR: Young MemoryUsageBeforeGC.committed");
+                    errors.incrementAndGet();
+                }
+
+                if (youngMemoryUsageBeforeGC.getMax() != maxCapacity) {
+                    log("ERROR: Young MemoryUsageBeforeGC.max");
+                    errors.incrementAndGet();
+                }
+            } else if (name.equals("ZGC Minor Pauses")) {
+                pauses.incrementAndGet();
+
+                if (!action.equals("end of GC pause")) {
+                    log("ERROR: Action");
+                    errors.incrementAndGet();
+                }
+
+                if (youngMemoryUsageBeforeGC.getInit() != 0) {
+                    log("ERROR: Young MemoryUsageBeforeGC.init");
+                    errors.incrementAndGet();
+                }
+
+                if (youngMemoryUsageBeforeGC.getUsed() != 0) {
+                    log("ERROR: Young MemoryUsageBeforeGC.used");
+                    errors.incrementAndGet();
+                }
+
+                if (youngMemoryUsageBeforeGC.getCommitted() != 0) {
+                    log("ERROR: Young MemoryUsageBeforeGC.committed");
+                    errors.incrementAndGet();
+                }
+
+                if (youngMemoryUsageBeforeGC.getMax() != 0) {
+                    log("ERROR: Young MemoryUsageBeforeGC.max");
+                    errors.incrementAndGet();
+                }
             } else {
-                System.out.println("ERROR: Name");
+                log("ERROR: Name");
                 errors.incrementAndGet();
             }
 
-            if (!action.equals("end of major GC")) {
-                System.out.println("ERROR: Action");
-                errors.incrementAndGet();
-            }
-
-            if (memoryUsageBeforeGC.getInit() != initialCapacity) {
-                System.out.println("ERROR: MemoryUsageBeforeGC.init");
-                errors.incrementAndGet();
-            }
-
-            if (memoryUsageBeforeGC.getUsed() > initialCapacity) {
-                System.out.println("ERROR: MemoryUsageBeforeGC.used");
-                errors.incrementAndGet();
-            }
-
-            if (memoryUsageBeforeGC.getCommitted() != initialCapacity) {
-                System.out.println("ERROR: MemoryUsageBeforeGC.committed");
-                errors.incrementAndGet();
-            }
-
-            if (memoryUsageBeforeGC.getMax() != maxCapacity) {
-                System.out.println("ERROR: MemoryUsageBeforeGC.max");
-                errors.incrementAndGet();
-            }
-
-            if (!cause.equals("System.gc()")) {
-                System.out.println("ERROR: Cause");
-                errors.incrementAndGet();
-            }
+            //if (!cause.equals("System.gc()")) {
+            //    log("ERROR: Cause");
+            //    errors.incrementAndGet();
+            //}
 
             if (startTime > endTime) {
-                System.out.println("ERROR: StartTime");
+                log("ERROR: StartTime");
                 errors.incrementAndGet();
             }
 
             if (endTime - startTime != duration) {
-                System.out.println("ERROR: Duration");
+                log("ERROR: Duration");
                 errors.incrementAndGet();
             }
         };
@@ -131,36 +227,48 @@ public class TestGarbageCollectorMXBean {
 
         // Register GC event listener
         for (final var collector : ManagementFactory.getGarbageCollectorMXBeans()) {
-            final NotificationBroadcaster broadcaster = (NotificationBroadcaster)collector;
-            broadcaster.addNotificationListener(listener, null, null);
+            final NotificationEmitter emitter = (NotificationEmitter)collector;
+            emitter.addNotificationListener(listener, null, null);
         }
 
         final int minCycles = 5;
+        final int minPauses = minCycles * 3;
 
         // Run GCs
         for (int i = 0; i < minCycles; i++) {
+            log("Starting GC " + i);
             System.gc();
         }
 
-        // Wait at most 60 seconds
-        for (int i = 0; i < 60; i++) {
+        // Wait at most 90 seconds
+        for (int i = 0; i < 90; i++) {
+            log("Waiting...");
             Thread.sleep(1000);
+
             if (cycles.get() >= minCycles) {
-                // All events received
+                log("All events received!");
                 break;
             }
         }
 
         final int actualCycles = cycles.get();
+        final int actualPauses = pauses.get();
         final int actualErrors = errors.get();
 
-        System.out.println("   minCycles: " + minCycles);
-        System.out.println("actualCycles: " + actualCycles);
-        System.out.println("actualErrors: " + actualErrors);
+        log("   minCycles: " + minCycles);
+        log("   minPauses: " + minPauses);
+        log("actualCycles: " + actualCycles);
+        log("actualPauses: " + actualPauses);
+        log("actualErrors: " + actualErrors);
 
         // Verify number of cycle events
-        if (cycles.get() < minCycles) {
+        if (actualCycles < minCycles) {
             throw new Exception("Unexpected cycles");
+        }
+
+        // Verify number of pause events
+        if (actualPauses < minPauses) {
+            throw new Exception("Unexpected pauses");
         }
 
         // Verify number of errors
