@@ -4,9 +4,7 @@
  *
  * This code is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.  Oracle designates this
- * particular file as subject to the "Classpath" exception as provided
- * by Oracle in the LICENSE file that accompanied this code.
+ * published by the Free Software Foundation.
  *
  * This code is distributed in the hope that it will be useful, but WITHOUT
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
@@ -61,8 +59,8 @@ import jdk.test.lib.RandomFactory;
  * @compile dnsprovider/TestDnsProvider.java
  * @run main/othervm LdapDnsProviderTest
  * @run main/othervm LdapDnsProviderTest nosm
- * @run main/othervm LdapDnsProviderTest smnodns
- * @run main/othervm LdapDnsProviderTest smdns
+ * @run main/othervm -Djava.security.manager=allow LdapDnsProviderTest smnodns
+ * @run main/othervm -Djava.security.manager=allow LdapDnsProviderTest smdns
  * @run main/othervm LdapDnsProviderTest nosmbaddns
  */
 
@@ -111,6 +109,13 @@ class ProviderTest implements Callable<Boolean> {
             env.put(Context.PROVIDER_URL, url);
         }
 
+        // Set JNDI LDAP connect timeout property. It helps to prevent
+        // initial bind operation from blocking in case of a local process
+        // listening on the port specified in the URL. With the property set,
+        // the bind operation will fail with timeout exception, and then it
+        // could be retried with another port number.
+        env.put("com.sun.jndi.ldap.connect.timeout", "1000");
+
         try {
             ctx = new InitialDirContext(env);
             SearchControls scl = new SearchControls();
@@ -119,8 +124,13 @@ class ProviderTest implements Callable<Boolean> {
                     "ou=People,o=Test", "(objectClass=*)", scl);
             throw new RuntimeException("Search should not complete");
         } catch (NamingException e) {
-            e.printStackTrace();
             passed = e.toString().contains(expected);
+            System.err.println((passed ? "Expected" : "Unexpected") +
+                    " NamingException observed: " + e.toString());
+            // Print stack trace only for unexpected exceptions
+            if (!passed) {
+                e.printStackTrace();
+            }
         } finally {
             shutItDown(ctx);
         }
@@ -243,7 +253,8 @@ public class LdapDnsProviderTest {
             // Construct text expected to be present in Exception message
             String expected = "localhost:" + port;
 
-            System.err.printf("Iteration %d: Testing: %s, %s%n", attempt, url, expected);
+            System.err.printf("Iteration %d: Testing: url='%s', expected content='%s'%n",
+                    attempt, url, expected);
 
             FutureTask<Boolean> future = new FutureTask<>(
                     new ProviderTest(url, expected));
@@ -278,7 +289,7 @@ public class LdapDnsProviderTest {
                     new ProviderTest(url, expected));
         new Thread(future).start();
 
-        System.err.println("Testing: " + url + ", " + expected);
+        System.err.printf("Testing: url='%s', expected content='%s'%n", url, expected);
         while (!future.isDone()) {
             try {
                 if (!future.get()) {
