@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,11 +23,11 @@
 
 /*
  * @test
+ * @bug 8246774
  * @summary Basic tests for prohibited magic serialization methods
  * @library /test/lib
- * @modules java.base/jdk.internal.org.objectweb.asm
- * @compile --enable-preview -source ${jdk.version} ProhibitedMethods.java
- * @run testng/othervm --enable-preview ProhibitedMethods
+ * @enablePreview
+ * @run testng ProhibitedMethods
  */
 
 import java.io.ByteArrayInputStream;
@@ -41,23 +41,23 @@ import java.io.ObjectOutputStream;
 import java.io.ObjectStreamClass;
 import java.io.OutputStream;
 import java.io.Serializable;
+import java.lang.classfile.ClassTransform;
+import java.lang.classfile.ClassFile;
+import java.lang.constant.MethodTypeDesc;
 import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
 import java.math.BigDecimal;
-import java.util.function.Function;
-import jdk.internal.org.objectweb.asm.ClassReader;
-import jdk.internal.org.objectweb.asm.ClassVisitor;
-import jdk.internal.org.objectweb.asm.ClassWriter;
-import jdk.internal.org.objectweb.asm.MethodVisitor;
+
 import jdk.test.lib.compiler.InMemoryJavaCompiler;
 import jdk.test.lib.ByteCodeLoader;
+import org.testng.Assert;
 import org.testng.annotations.BeforeTest;
 import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 import static java.lang.System.out;
-import static jdk.internal.org.objectweb.asm.ClassWriter.COMPUTE_FRAMES;
-import static jdk.internal.org.objectweb.asm.ClassWriter.COMPUTE_MAXS;
-import static jdk.internal.org.objectweb.asm.Opcodes.*;
+import static java.lang.classfile.ClassFile.ACC_PRIVATE;
+import static java.lang.constant.ConstantDescs.CD_String;
+import static java.lang.constant.ConstantDescs.CD_void;
 import static org.testng.Assert.assertEquals;
 import static org.testng.Assert.assertTrue;
 import static org.testng.Assert.expectThrows;
@@ -69,7 +69,6 @@ import static org.testng.Assert.fail;
  * record objects.
  */
 public class ProhibitedMethods {
-    private static final String VERSION = Integer.toString(Runtime.version().feature());
 
     public interface ThrowingExternalizable extends Externalizable {
         default void writeExternal(ObjectOutput out) {
@@ -106,8 +105,7 @@ public class ProhibitedMethods {
     public void setup() {
         {
             byte[] byteCode = InMemoryJavaCompiler.compile("Foo",
-                    "public record Foo () implements java.io.Serializable { }",
-                    "--enable-preview", "-source", VERSION);
+                    "public record Foo () implements java.io.Serializable { }");
             byteCode = addWriteObject(byteCode);
             byteCode = addReadObject(byteCode);
             byteCode = addReadObjectNoData(byteCode);
@@ -115,8 +113,7 @@ public class ProhibitedMethods {
         }
         {
             byte[] byteCode = InMemoryJavaCompiler.compile("Bar",
-                    "public record Bar (int x, int y) implements java.io.Serializable { }",
-                    "--enable-preview", "-source", VERSION);
+                    "public record Bar (int x, int y) implements java.io.Serializable { }");
             byteCode = addWriteObject(byteCode);
             byteCode = addReadObject(byteCode);
             byteCode = addReadObjectNoData(byteCode);
@@ -125,8 +122,7 @@ public class ProhibitedMethods {
         {
             byte[] byteCode = InMemoryJavaCompiler.compile("Baz",
                     "import java.io.Serializable;" +
-                    "public record Baz<U extends Serializable,V extends Serializable>(U u, V v) implements Serializable { }",
-                    "--enable-preview", "-source", VERSION);
+                    "public record Baz<U extends Serializable,V extends Serializable>(U u, V v) implements Serializable { }");
             byteCode = addWriteObject(byteCode);
             byteCode = addReadObject(byteCode);
             byteCode = addReadObjectNoData(byteCode);
@@ -223,103 +219,38 @@ public class ProhibitedMethods {
 
     // -- machinery for augmenting record classes with prohibited serial methods --
 
+    static final String WRITE_OBJECT_NAME = "writeObject";
+    static final MethodTypeDesc WRITE_OBJECT_DESC = MethodTypeDesc.ofDescriptor("(Ljava/io/ObjectOutputStream;)V");
+
     static byte[] addWriteObject(byte[] classBytes) {
-        return addMethod(classBytes, cv -> new WriteObjectVisitor(cv));
+        return addMethod(classBytes, WRITE_OBJECT_NAME, WRITE_OBJECT_DESC);
     }
+
+    static final String READ_OBJECT_NAME = "readObject";
+    static final MethodTypeDesc READ_OBJECT_DESC = MethodTypeDesc.ofDescriptor("(Ljava/io/ObjectInputStream;)V");
 
     static byte[] addReadObject(byte[] classBytes) {
-        return addMethod(classBytes, cv -> new ReadObjectVisitor(cv));
+        return addMethod(classBytes, READ_OBJECT_NAME, READ_OBJECT_DESC);
     }
 
+    static final String READ_OBJECT_NO_DATA_NAME = "readObjectNoData";
+    static final MethodTypeDesc READ_OBJECT_NO_DATA_DESC = MethodTypeDesc.of(CD_void);
+
     static byte[] addReadObjectNoData(byte[] classBytes) {
-        return addMethod(classBytes, cv -> new ReadObjectNoDataVisitor(cv));
+        return addMethod(classBytes, READ_OBJECT_NO_DATA_NAME, READ_OBJECT_NO_DATA_DESC);
     }
 
     static byte[] addMethod(byte[] classBytes,
-                            Function<ClassVisitor,ClassVisitor> classVisitorCreator) {
-        ClassReader reader = new ClassReader(classBytes);
-        ClassWriter writer = new ClassWriter(reader, COMPUTE_MAXS | COMPUTE_FRAMES);
-        reader.accept(classVisitorCreator.apply(writer), 0);
-        return writer.toByteArray();
-    }
-
-    static abstract class AbstractVisitor extends ClassVisitor {
-        final String nameOfMethodToAdd;
-        AbstractVisitor(ClassVisitor cv, String nameOfMethodToAdd) {
-            super(ASM8, cv);
-            this.nameOfMethodToAdd = nameOfMethodToAdd;
-        }
-        @Override
-        public MethodVisitor visitMethod(final int access,
-                                         final String name,
-                                         final String descriptor,
-                                         final String signature,
-                                         final String[] exceptions) {
-            // the method-to-be-added should not already exist
-            assert !name.equals(nameOfMethodToAdd) : "Unexpected " + name + " method";
-            return cv.visitMethod(access, name, descriptor, signature, exceptions);
-        }
-        @Override
-        public void visitEnd() {
-            throw new UnsupportedOperationException("implement me");
-        }
-    }
-
-    /** A visitor that generates and adds a writeObject method. */
-    static final class WriteObjectVisitor extends AbstractVisitor {
-        static final String WRITE_OBJECT_NAME = "writeObject";
-        static final String WRITE_OBJECT_DESC = "(Ljava/io/ObjectOutputStream;)V";
-        WriteObjectVisitor(ClassVisitor cv) { super(cv, WRITE_OBJECT_NAME); }
-        @Override
-        public void visitEnd() {
-            MethodVisitor mv = cv.visitMethod(ACC_PRIVATE, WRITE_OBJECT_NAME, WRITE_OBJECT_DESC, null, null);
-            mv.visitCode();
-            mv.visitLdcInsn(WRITE_OBJECT_NAME + " should not be invoked");
-            mv.visitMethodInsn(INVOKESTATIC, "org/testng/Assert", "fail", "(Ljava/lang/String;)V", false);
-            mv.visitInsn(RETURN);
-            mv.visitMaxs(0, 0);
-            mv.visitEnd();
-
-            cv.visitEnd();
-        }
-    }
-
-    /** A visitor that generates and adds a readObject method. */
-    static final class ReadObjectVisitor extends AbstractVisitor {
-        static final String READ_OBJECT_NAME = "readObject";
-        static final String READ_OBJECT_DESC = "(Ljava/io/ObjectInputStream;)V";
-        ReadObjectVisitor(ClassVisitor cv) { super(cv, READ_OBJECT_NAME); }
-        @Override
-        public void visitEnd() {
-            MethodVisitor mv = cv.visitMethod(ACC_PRIVATE, READ_OBJECT_NAME, READ_OBJECT_DESC, null, null);
-            mv.visitCode();
-            mv.visitLdcInsn(READ_OBJECT_NAME + " should not be invoked");
-            mv.visitMethodInsn(INVOKESTATIC, "org/testng/Assert", "fail", "(Ljava/lang/String;)V", false);
-            mv.visitInsn(RETURN);
-            mv.visitMaxs(0, 0);
-            mv.visitEnd();
-
-            cv.visitEnd();
-        }
-    }
-
-    /** A visitor that generates and adds a readObjectNoData method. */
-    static final class ReadObjectNoDataVisitor extends AbstractVisitor {
-        static final String READ_OBJECT_NO_DATA_NAME = "readObjectNoData";
-        static final String READ_OBJECT_NO_DATA_DESC = "()V";
-        ReadObjectNoDataVisitor(ClassVisitor cv) { super(cv, READ_OBJECT_NO_DATA_NAME); }
-        @Override
-        public void visitEnd() {
-            MethodVisitor mv = cv.visitMethod(ACC_PRIVATE, READ_OBJECT_NO_DATA_NAME, READ_OBJECT_NO_DATA_DESC, null, null);
-            mv.visitCode();
-            mv.visitLdcInsn(READ_OBJECT_NO_DATA_NAME + " should not be invoked");
-            mv.visitMethodInsn(INVOKESTATIC, "org/testng/Assert", "fail", "(Ljava/lang/String;)V", false);
-            mv.visitInsn(RETURN);
-            mv.visitMaxs(0, 0);
-            mv.visitEnd();
-
-            cv.visitEnd();
-        }
+                            String name, MethodTypeDesc desc) {
+        var cf = ClassFile.of();
+        return cf.transform(cf.parse(classBytes), ClassTransform.endHandler(clb -> {
+            clb.withMethodBody(name, desc, ACC_PRIVATE, cob -> {
+                cob.constantInstruction(name + " should not be invoked");
+                cob.invokestatic(Assert.class.describeConstable().orElseThrow(), "fail",
+                        MethodTypeDesc.of(CD_void, CD_String));
+                cob.return_();
+            });
+        }));
     }
 
     // -- infra sanity --
