@@ -4,9 +4,7 @@
  *
  * This code is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.  Oracle designates this
- * particular file as subject to the "Classpath" exception as provided
- * by Oracle in the LICENSE file that accompanied this code.
+ * published by the Free Software Foundation.
  *
  * This code is distributed in the hope that it will be useful, but WITHOUT
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
@@ -26,27 +24,44 @@
 package jdk.jfr.event.gc.detailed;
 
 import java.util.List;
+import java.util.concurrent.CopyOnWriteArrayList;
 
 import static gc.testlibrary.Allocation.blackHole;
 import jdk.jfr.Recording;
 import jdk.jfr.consumer.RecordedEvent;
+import jdk.jfr.consumer.RecordingStream;
 import jdk.test.lib.jfr.EventNames;
 import jdk.test.lib.jfr.Events;
 
 /**
- * @test TestZUncommitEvent
- * @requires vm.hasJFR & vm.gc.Z
+ * @test id=ZSinglegen
+ * @requires vm.hasJFR & vm.gc.ZSinglegen
  * @key jfr
  * @library /test/lib /test/jdk /test/hotspot/jtreg
- * @run main/othervm -XX:+UseZGC -Xms32M -Xmx128M -Xlog:gc,gc+heap -XX:+ZUncommit -XX:ZUncommitDelay=1 jdk.jfr.event.gc.detailed.TestZUncommitEvent
+ * @run main/othervm -XX:+UseZGC -XX:-ZGenerational -Xms32M -Xmx128M -Xlog:gc,gc+heap -XX:+ZUncommit -XX:ZUncommitDelay=1 jdk.jfr.event.gc.detailed.TestZUncommitEvent
+ */
+
+/**
+ * @test id=ZGenerational
+ * @requires vm.hasJFR & vm.gc.ZGenerational
+ * @key jfr
+ * @library /test/lib /test/jdk /test/hotspot/jtreg
+ * @run main/othervm -XX:+UseZGC -XX:+ZGenerational -Xms32M -Xmx128M -Xlog:gc,gc+heap -XX:+ZUncommit -XX:ZUncommitDelay=1 jdk.jfr.event.gc.detailed.TestZUncommitEvent
  */
 
 public class TestZUncommitEvent {
     public static void main(String[] args) throws Exception {
-        try (Recording recording = new Recording()) {
-            // Activate the event we are interested in and start recording
-            recording.enable(EventNames.ZUncommit);
-            recording.start();
+        List<RecordedEvent> events = new CopyOnWriteArrayList<>();
+        try (RecordingStream stream = new RecordingStream()) {
+            // Activate the event
+            stream.enable(EventNames.ZUncommit);
+            stream.onEvent(e -> {
+                // Got event, close stream
+                events.add(e);
+                stream.close();
+            });
+            // Start recording
+            stream.startAsync();
 
             // Allocate a large object, to force heap usage above min heap size
             blackHole(new byte[32 * 1024 * 1024]);
@@ -54,21 +69,10 @@ public class TestZUncommitEvent {
             // Collect
             System.gc();
 
-            // Wait for uncommit to happen
-            Thread.sleep(10 * 1000);
+            stream.awaitTermination();
 
-            recording.stop();
-
-            // Verify recording
-            List<RecordedEvent> events = Events.fromRecording(recording);
             System.out.println("Events: " + events.size());
             Events.hasEvents(events);
-            for (RecordedEvent event : Events.fromRecording(recording)) {
-                System.out.println("Event:" + event);
-                final long capacityBefore = Events.assertField(event, "capacityBefore").getValue();
-                final long capacityAfter = Events.assertField(event, "capacityAfter").below(capacityBefore).getValue();
-                Events.assertField(event, "uncommitted").equal(capacityBefore - capacityAfter);
-            }
         }
     }
 }
