@@ -2,11 +2,11 @@
  * @test /nodynamiccopyright/
  * @bug 8231827
  * @summary Ensure that scopes arising from conditionalExpressions are handled corrected.
- * @compile/fail/ref=BindingsTest2.out -XDrawDiagnostics -XDshould-stop.at=FLOW --enable-preview -source ${jdk.version} BindingsTest2.java
+ * @compile/fail/ref=BindingsTest2.out -XDrawDiagnostics -XDshould-stop.at=FLOW BindingsTest2.java
  */
 public class BindingsTest2 {
     public static boolean Ktrue() { return true; }
-    public static void main(String[] args) {
+    public static void meth() {
         Object o1 = "hello";
         Integer in = 42;
         Object o2 = in;
@@ -240,6 +240,69 @@ public class BindingsTest2 {
 
                 s.length();
             }
+        }
+
+        {
+            if (o1 instanceof final String s) {
+                s = "";
+            }
+        }
+        {
+            LBL1: LBL2: if (!(o1 instanceof String s)) {
+                break LBL1;
+            }
+
+            System.err.println(s);
+        }
+        {
+            LBL1: LBL2: if (!(o1 instanceof String s)) {
+                break LBL2;
+            }
+
+            System.err.println(s);
+        }
+        {
+            LBL1: LBL2: if (o1 instanceof String s) {
+            } else {
+                break LBL1;
+            }
+
+            System.err.println(s);
+        }
+        {
+            LBL1: LBL2: if (o1 instanceof String s) {
+            } else {
+                break LBL2;
+            }
+
+            System.err.println(s);
+        }
+        {
+            switch (0) {
+                case 0:
+                    if (!(o1 instanceof String s)) {
+                        break;
+                    }
+            }
+            s.length();
+        }
+
+        {
+            int j = 0;
+            L: while (j++ < 2)
+                   if (!(o1 instanceof String s)) {
+                       break L;
+                   }
+            s.length();
+        }
+
+        {
+            int j = 0;
+            L: for (; j++ < 2; )
+                   if (!(o1 instanceof String s)) {
+                       break L;
+                   }
+            s.length();
         }
     }
 }
