@@ -2,10 +2,10 @@
  * @test /nodynamiccopyright/
  * @bug 8187420 8231827
  * @summary Error message mentions relevant types transposed
- * @compile/fail/ref=EnsureTypesOrderTest.out -XDrawDiagnostics --enable-preview -source ${jdk.version} EnsureTypesOrderTest.java
+ * @compile/fail/ref=EnsureTypesOrderTest.out -XDrawDiagnostics EnsureTypesOrderTest.java
  */
 public class EnsureTypesOrderTest {
-    public static void main(String [] args) {
+    public static void meth(String[] args) {
         if (args instanceof String s) {
             System.out.println("Broken");
         }
