@@ -2,7 +2,7 @@
  * @test /nodynamiccopyright/
  * @bug 8231827
  * @summary Basic pattern bindings scope test
- * @compile/fail/ref=MatchBindingScopeTest.out -XDrawDiagnostics --enable-preview -source ${jdk.version} MatchBindingScopeTest.java
+ * @compile/fail/ref=MatchBindingScopeTest.out -XDrawDiagnostics MatchBindingScopeTest.java
  */
 public class MatchBindingScopeTest {
 
@@ -11,7 +11,7 @@ public class MatchBindingScopeTest {
     static Object o1 = s;
     static Object o2 = i;
 
-    public static void main(String[] args) {
+    public static void meth() {
 
         if (o1 instanceof String j && j.length() == 5) { // OK
             System.out.println(j); // OK
