@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2017, 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2017, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -26,7 +26,7 @@
  * @bug 8231827
  * @summary Check proper positions.
  * @build PatternMatchPosTest
- * @compile/ref=PatternMatchPosTest.out -processor PatternMatchPosTest -Xlint:unchecked -XDrawDiagnostics --enable-preview -source ${jdk.version} PatternMatchPosTestData.java
+ * @compile/ref=PatternMatchPosTest.out -processor PatternMatchPosTest -Xlint:unchecked -XDrawDiagnostics PatternMatchPosTestData.java
  */
 
 import java.io.IOException;
@@ -85,8 +85,9 @@ public class PatternMatchPosTest extends AbstractProcessor {
                     if (print) {
                         int start = (int) sp.getStartPosition(dataPath.getCompilationUnit(), tree);
                         int end = (int) sp.getEndPosition(dataPath.getCompilationUnit(), tree);
-                        processingEnv.getMessager().printMessage(Diagnostic.Kind.NOTE,
-                                                                 text.substring(start, end));
+                        if (start != (-1) || end != (-1)) {
+                            processingEnv.getMessager().printNote(text.substring(start, end));
+                        }
                     }
                     return super.scan(tree, p);
                 }
