@@ -2,13 +2,13 @@
  * @test /nodynamiccopyright/
  * @bug 8187429 8231827
  * @summary Missing unchecked conversion warning
- * @compile/fail/ref=UncheckedWarningOnMatchesTest.out -Xlint:unchecked -Werror -XDrawDiagnostics --enable-preview -source ${jdk.version} UncheckedWarningOnMatchesTest.java
+ * @compile/fail/ref=UncheckedWarningOnMatchesTest.out -Xlint:unchecked -Werror -XDrawDiagnostics UncheckedWarningOnMatchesTest.java
  */
 import java.util.ArrayList;
 
 public class UncheckedWarningOnMatchesTest {
 
-    public static void main(String [] args) {
+    public static void meth() {
 
         Object o = new ArrayList<UncheckedWarningOnMatchesTest>();
         if (o instanceof ArrayList<Integer> ai) {  // unchecked conversion
